Added guelder rose assets

--- a/_posts/2025-07-16-banana.md
+++ b/_posts/2025-07-16-banana.md
@@ -49,7 +49,7 @@ While wild bananas are more diverse than previously understood, scientists have 
 In 1753, [Carl Linnaeus](Q1043)’ [formative work](Q29270), [_Systema Naturae,_](https://www.biodiversitylibrary.org/page/728487) formalized a system of nomenclature that standardized plant names and botanical terminology among botanists across the globe. The system used [Latin binomial names](Q54878466)—the first name indicating the genus, and the second the species—to identify all living organism in the natural world. In addition to binomial names, Linnaeus also proposed a new system of classifying plants. Unlike earlier attempts to group or classify plants, Linnaeus’s system focused solely on the reproductive features of wild plants (not domesticated) to characterize, organize, and group related plants. While Linnaeus’s system was a somewhat artificial structure of classification and hierarchical divisions placed on the plant world, it provided order and standardization from the chaos of plant names and groupings created by centuries of disparate European collecting and cataloguing of the plant world. While the Linnaean system of classification has been revised, modified, and added to over the centuries, the system of binomial names has remained largely unchallenged for nearly 250 years.
 
 <!-- Flickr image no longer available
-{% include embed/image.html src="c25fa141a470ac070cc8bc6243c447f91f12c2711a843ac3d571c0159ef513c9.yaml" aspect="" class="right" %}
+{% include embed/image.html manifest="c25fa141a470ac070cc8bc6243c447f91f12c2711a843ac3d571c0159ef513c9.yaml" aspect="" class="right" %}
  -->
 
 Yet, despite [Linnaean taxonomy’s](Q54878466) international acceptance and longevity, Linnaeus’s naming system does have its limitations, which we can see in the case of the banana. Linnaeus did not consider domesticated plants species, since they were the product of human manipulation. The two "wild" species of banana identified by Linnaeus–_[Musa x paradisiaca](Q10757112)_ and _[Musa sapientum](Q49625849)_-were in fact domesticated edible cultivars. Linnaeus was unaware of the banana’s long and complex history of domestication.
@@ -124,7 +124,7 @@ An intense [monoculture](Q220212) focused on the [vegetal propagation](Q464666) 
 Today the Cavendish banana remains the dominant cultivated and exported varietal of bananas. Just as it did in the twentieth century, the current global production of more than one million tons of bananas is based on large-scale vegetative propagation of a small number of genotypes derived from a handful of ancient sexual recombination events. This makes the Cavendish varietal, like the Gros Michel, particularly susceptible to diseases, as well as pests and climate change. Recent scientific studies on banana genetics and genomes, however, could hold the key to diversifying and revitalizing banana hybrids. For many scientists, the goal is to figure out banana’s origin story in order to produce new polyploid hybrids through genetic recombination, genetic engineering, and manipulation of fertile diploids, just as societies in Southeast Asia did thousands of years ago.[^ref7]
 
 <!-- Image no longer available - https://promusa.orgpreview3344/
-{% include embed/image.html src="f3470082f04ed996a163ba4c60f1f67d87ca3145f154ea9dc0cbfa7a17006db4.yaml" region="-7,1,674,519" aspect="" class="right" %}
+{% include embed/image.html manifest="f3470082f04ed996a163ba4c60f1f67d87ca3145f154ea9dc0cbfa7a17006db4.yaml" region="-7,1,674,519" aspect="" class="right" %}
 -->
 
 While we need to rethink how we select, hybridize, and propagate bananas, scientists have also been rethinking how banana cultivars are classified. In 1955, an informal nomenclature system to classify banana cultivars was developed by Norman Simmonds and Kenneth Shepherd. Instead of assigning binomial names, Simmonds and Shepherd organized edible bananas into genome groups, according to the chromosomal contributions of their ancestral wild species (i.e., AAA, AAB, and ABB) and subgroups for closely related cultivars derived from mutation selection and propagation (i.e., the Gros Michel and Cavendish).[^ref8] While Simmonds and Shepherd had to rely on chromosomal classification based on the visible morphology of banana cultivars, scientists today have more reliable genome techniques, allowing them to analyze and reclassify the genetic make-up of hundreds of banana cultivars. And so, we have two systems of nomenclature for the banana: one for wild, seedy bananas and another for the seedless edible cultivars. This work has revealed that more than 100 subspecies of Musa acuminata have been implicated in the domestication of bananas. Despite this work, scientists still do not know just how many banana cultivars actually exist and are still working to formalize a genome-based classification system in the hopes of finally creating an internally coherent list of names for banana species, subspecies, and cultivars.[^ref9]
