--- a/_posts/2025-07-16-boxwood.md
+++ b/_posts/2025-07-16-boxwood.md
@@ -52,7 +52,7 @@ The real issue with boxwood was what sixteenth-century English physician [John G
 Boxwood’s potential medicinal applications met with a similar lack of enthusiasm. Despite an attempt by [Amato Lusitano](Q455777), a sixteenth-century Portuguese Jewish physician, to prove that boxwood was a native European analogue of guaiacum and could, therefore, potentially cure [syphilis](Q41083), the general consensus—endorsed by the leading writer on _materia medica_, [Pietro Andrea Mattioli](Q457191)—was that it "had no use in medicine." Lusitano’s claim was dismissed as "vain and foolish," which "could in no way be acceptable to doctors."[^ref15] Such pronouncements against boxwood, which was considered of "no physical use among the most and best physicians," were sustained by the Englishman [John Parkinson](Q37393560) (who, however, noted that its leaves could be given to horses as a cure for [botfly](Q27485) larvae); Gerard raged against "foolish empirics and women leeches" who "minister it against [apoplexy](Q8264724) and such diseases."[^ref16] This negative opinion continued to pervade early modern medical thought, while boxwood’s known curative properties, especially as a styptic, generally remained ignored. 
 
 <!-- TODO: identify the specific page of interest - 605 is not indexable
-{% include embed/image.html src="https://archive.org/embed/gri_33125012606931/page/605/mode/1up" aspect="0.6" class="right" %}
+{% include embed/image.html manifest="https://archive.org/embed/gri_33125012606931/page/605/mode/1up" aspect="0.6" class="right" %}
  -->
 
 # A Crafty Kind of Wood
