--- a/_posts/2025-07-16-cassava.md
+++ b/_posts/2025-07-16-cassava.md
@@ -21,7 +21,7 @@ image:
 
 When eaten raw, [cassava](Q43304555) is likely to leave a bitter taste in one’s mouth. Worse still, the unprocessed plant, containing high levels of [cyanide](Q55076544), is poisonous to humans and can paralyze when eaten. Despite these deterring properties, cassava has long been culturally and nutritionally significant. And as a result of Indigenous peoples of Meso- and South America discovering a way to render it edible through extensive processing, today processed cassava is enjoyed by 600 million people.[^ref1] One of the world’s major food crops alongside maize, rice, and wheat, cassava is cultivated as far away from its native habitat in South America as Southeast Asia. Nigeria is the world’s largest producer of cassava, where it is a primary source of carbohydrates for many and is consumed as part of a popular dish known as _[fufu](Q941004)_.
 
-`image-compare before=Cassava_fufu_soup_fish_Flickr.jpg after=Cassava_VitA_Nigeria_Flickr-standard-scale-2_00x-gigapixel.jpg aspect=1.4`
+{% include embed/image-compare.html before="Cassava_fufu_soup_fish_Flickr.jpg" after="Cassava_VitA_Nigeria_Flickr-standard-scale-2_00x-gigapixel.jpg" aspect="1.4" class="right" %}
 
 How did cassava come to occupy this pride of place in the global food system? How did cassava transform from a poisonous [tuber](Q183319) into a major food staple, and from an exclusive dweller of South America into a cosmopolitan citizen of the world? To answer these questions, this essay looks at how human interactions with cassava helped shape the plant into the significant food crop that it is today. We first look at the elaborate method of processing cassava developed by the Indigenous peoples of Meso- and South America and then turn to the codification and spread of this knowledge, facilitated by European travelers to the New World. This meeting of Indigenous and European knowledge systems, combined with cassava’s tolerance for drought, resulted in a food crop that would create new hope for global food security in the twentieth and twenty-first centuries. Furthermore, as knowledge of cassava and its specimens circulated to different parts of the world, the plant took on additional cultural meanings through novel culinary uses and artistic representations.
 
@@ -40,7 +40,7 @@ Archaeological evidence suggests that cassava became an important food staple fo
 
 Representations of cassava made by Moche artists provide clues as to how the plant was understood and appreciated by Andean peoples in the first millennium of the Common Era. Moche artists often represented cassava together with _[Leptodactylus pentadactylus](Q2136945)_—a frog found throughout the [Amazon](Q177567)—as shown in [this ceramic](http://museum.doaks.org/objects-1/info/22560) from [Dumbarton Oaks’s](Q1264942) collection. The smoky jungle frog, as this species is commonly called, was likely associated with agriculture, and representations of frogs may have been used in harvest-related rituals.[^ref5] Cassava may have held similar significance to Andean peoples, and ceramics such as this one may have been used to ensure a bountiful cassava harvest.
 
-`image-compare before=Jar-depicting-the-botanical-frog.jpg after=wc:Bull_frog_(Leptodactylus_pentadactylus).jpg aspect=1.56`
+{% include embed/image-compare.html before="Jar-depicting-the-botanical-frog.jpg" after="wc:Bull_frog_(Leptodactylus_pentadactylus).jpg" aspect="1.56" class="right" %}
 
 The Moche ceramic contains further clues as to early Andean understanding of cassava. Moche artists may have chosen to pair the cassava plant with the frog to highlight characteristics they share. Both were known for being poisonous and for their capacity to survive underground for long periods of time.[^ref6] Indeed, while cassava roots are the most commonly eaten part of the plant, they go bad quickly when dug up from the soil. However, if cassava is left in the ground, it can survive for up to four years and be harvested periodically.[^ref7]
 
@@ -52,7 +52,7 @@ The Moche ceramic contains further clues as to early Andean understanding of cas
 
 While storing cassava in the soil addresses the issue of perishability, additional steps need to be taken to ensure that its roots can be safely eaten upon harvesting. In the Amazon, cassava is popularly divided into two major types—sweet and bitter—depending on the level of toxicity. Sweet cassava can be eaten simply by peeling and boiling it. Bitter cassava must be processed using a specific method before being safely consumed.[^ref8] The danger lies in [cyanogenic glucosides](Q8964351), the amount of which varies depending on the type of cassava, the climate, and the season in which it is cultivated.[^ref9] Women in Meso- and South America are primarily responsible for the processing of cassava and transforming the poisonous plant into flour for _[casaba](Q61998616)_, or cassava bread, and into a fermented beverage known as _[chicha](Q516592)_. It is a multi-step process that includes washing and grating the cassava root, mashing it into a pulp, then hanging, dehydrating, and finally baking the dried pulp on a hot surface.[^ref10]
 
-{% include embed/image.html src="Saliva_Indian_Women_Making_Cassava_Bread,_Province_of_Casanare.yaml" class="right" %}
+{% include embed/image.html manifest="Saliva_Indian_Women_Making_Cassava_Bread,_Province_of_Casanare.yaml" class="right" %}
 
 Some of the implements used for processing cassava include [graters, strainers or squeezers, and sieves.](https://www.spurlock.illinois.edu/blog/p/food-and-drink/294) Cassava graters are generally constructed by embedding small stones or nails into a wooden surface.[^ref11] The cassava root is rubbed along the device so that the stones or nails shred the tuber into small pieces. These pieces are soaked in water to form pulp, which is placed into a strainer or squeezer to remove the liquid. The toxins are removed during this straining process.[^ref12] Cassava squeezers have a similar form throughout South America: a circular woven tube that is designed to be hung from up high. The woven designs, however, may differ according to culture. After the liquid is drained, the cassava pulp is further passed through a sieve, after which it is suitable for cooking and consumption.
 
@@ -105,7 +105,7 @@ As Europeans moved between continents, knowledge of cassava preparation, togethe
 
 With this transfer of knowledge from South America to Africa, other innovations emerged. For example, African women learned that the bitter cassava root was poisonous and learned how to prepare its leaves instead.[^ref29] They discovered that young cassava leaves could be safely consumed after being boiled. A new method of processing the root also developed, which involved pressing it with stone weights instead of using the hanging method favored in South America.[^ref30] Another African innovation emerged in the form of _[gari](Q1494252)_, or toasted flakes, made from the dried pulp of processed cassava. They are not as refined as the _farinha_ produced in South America, but can be stored for a long period of time.[^ref31]
 
-`image-compare before=Cassava_leaf_Flickr.jpg after=4989769.jpg`
+{% include embed/image-compare.html before="Cassava_leaf_Flickr.jpg" after="4989769.jpg" class="right" %}
 
 # Food of the Future?
 
