--- a/_posts/2025-07-16-cinnamon.md
+++ b/_posts/2025-07-16-cinnamon.md
@@ -21,7 +21,7 @@ image:
 
 Between 2007 and 2014, the "[cinnamon challenge](Q420721)" was an internet hype. Although the instructions were simple enough—swallow a tablespoon of cinnamon at once—they proved to be virtually impossible to follow in practice. Trying to ingest dry, ground cinnamon bark initially causes a severe choke reaction, characterized by extreme exhalation of cinnamon powder (known as "dragon breath"). Subsequently, the cinnamon combines with saliva in the mouth to produce an indigestible clutter at the back of the throat. Thankfully, this [quite dangerous assignment](https://doi.org/10.1542/peds.2012-3418) will only be a marginal footnote to the history of cinnamon. Those who only know cinnamon from an endless number of ridiculous YouTube videos that recorded the challenge, or as a quotidian kitchen spice, will be surprised to learn that the real challenge—to find out what cinnamon actually is, as a plant and as a medicine—has been a centuries-long and ongoing effort.
 
-`youtube vid=cmpd58kMl2s caption="Mythbusters Cinnamon Challenge." .medium aspect=1.7`
+{% include embed/youtube.html id="cmpd58kMl2s" caption="Mythbusters Cinnamon Challenge." aspect="1.7" class="right" %}
 
 # Forgotten Knowledge and Fabricated History
 
