--- a/_posts/2025-07-16-dittany.md
+++ b/_posts/2025-07-16-dittany.md
@@ -31,20 +31,20 @@ Dittany—an aromatic herbaceous plant—has been used as a medicinal herb, part
 
 By the beginning of the [Medieval period](Q12554), the works of classical authors such as Pliny and [Dioscorides](Q297776) were continuously collected and reproduced to create a genre of manuscripts known collectively as [herbals](Q6165948). Today, we define herbals as a family of related books produced by naturalists, physicians, and proto botanists that identify and describe plants through text and/or illustrations and explain plants’ medicinal virtues, often incorporating local or indigenous knowledge as well as recipes for therapeutic preparations. As a genre, herbals were also highly interconnected. Authors of herbals routinely cited one another, commented on, or translated previously published herbals, synthesizing information on plant nomenclature, origin, and botanical lore in the process.
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html source=1mlXQQ3VKfeYznV2VktShOQd2-7aH5p52_n20LQ1U0uE timenav-position=bottom hash-bookmark=false initial-zoom=1 height=650`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" class="right" %}
 
 One such lore was the power of dittany for women’s health. According to the Roman physician Dioscorides, arguably the most influential ancient author on medicinal herbs, "diktamnos," as he called it, was a hot plant with woolly leaves, and true dittany grew only on the island of [Crete](Q34374). Like Pliny, Dioscorides described the medical virtues of dittany (and bastard dittany) for women, which he said when drunk, used as suppository (pessary), or burned as incense had the power to expel a dead fetus. Dioscorides’s _[De Materia Medica](Q1291275)_ served as the foundational text for most European herbal manuscripts. As such, Dioscorides’s description of dittany as well as his claim that it had the power to quicken birth and expel a dead fetus, were repeated in medieval herbal manuscripts as well as in early modern printed herbals.
 
 <!-- broken image link
-{% include embed/image.html src="2314efcd51a8737c56c82eebde7123aef58754a932f461508100d0d2ae92907f.yaml" aspect="" class="right" %}
+{% include embed/image.html manifest="2314efcd51a8737c56c82eebde7123aef58754a932f461508100d0d2ae92907f.yaml" aspect="" class="right" %}
 -->
 
 By the early modern period, dittany was often described in herbals [in three forms.](https://biodiversitylibrary.org/page/56599913) The first was true dittany, a rare herb which, as Pliny wrote, grew only on rocky cliffs on the island of Crete. The second was white dittany (sometimes called fraxinella), and the third was bastard or false dittany. Today, these correlate to three different species across three related genera—_[Origanum dictamnus](Q1227336)_, _[Dictamnus albus](Q157755)_, and _[Ballota pseudodictamnus](Q15345437)_ respectively. While we now classify dittany as three distinct species, in early modern herbals the main differences between the three were origin and, most importantly, potency. Whether described in two or three forms, dittany continued to be classified as a potent emmenagogue and an expellant for both a fetus and afterbirth in early modern herbals.
 
 <!-- broken image links
-{% include embed/image.html src="2a8d3ff777f06996b55f34312ded1dfaa6f513ef4d9ec770f15aae46843cd50a.yaml" aspect="" class="right" %}
-{% include embed/image.html src="3d13c3c61f78f56bd9f063c11b4d82b6b3e75af49952951faee9697313541875.yaml" aspect="" class="right" %}
-{% include embed/image.html src="7c876b6f3affb2130639db6ed6361ddcf97a767b5819cf10927c56ff090e5fe8.yaml" aspect="" class="right" %}
+{% include embed/image.html manifest="2a8d3ff777f06996b55f34312ded1dfaa6f513ef4d9ec770f15aae46843cd50a.yaml" aspect="" class="right" %}
+{% include embed/image.html manifest="3d13c3c61f78f56bd9f063c11b4d82b6b3e75af49952951faee9697313541875.yaml" aspect="" class="right" %}
+{% include embed/image.html manifest="7c876b6f3affb2130639db6ed6361ddcf97a767b5819cf10927c56ff090e5fe8.yaml" aspect="" class="right" %}
 -->
 
 # Herbals and Women’s Medical Knowledge 
@@ -55,7 +55,7 @@ The historical record is largely silent on how early modern women perceived and 
 
 Ancient, medieval, and early modern herbals were by and large written by men and were the product of a learned textual tradition rather than lay or common knowledge.[^ref2] As such, the simple appearance of dittany as an herb for women’s health in herbals is not sufficient evidence to suggest that women knew the plant’s medicinal virtues and used it accordingly. However, while the initial production of early modern herbals was spurred by learned medical humanists seeking to elucidate classical scholarship to produce more useful guides for identifying medicinal plants, the popularity and proliferation of herbals increased substantially over the course of the sixteenth and seventeenth centuries. This indicates that herbals were consumed by an increasingly larger audience. Furthermore, many herbals produced in the late sixteenth century, such as [Castore Durante’s](Q205031) [1585 Roman herbal,](https://biodiversitylibrary.org/page/49828671) were simplified versions of more complicated Latin herbals, written in the vernacular and, thus, far more accessible to a wider, albeit literate, audience.
 
-`image-compare before=35673708.jpg after=49828671.jpg aspect=`
+{% include embed/image-compare.html before="35673708.jpg" after="49828671.jpg" class="right" %}
 
 Historians of early modern medicine have demonstrated that elite and middling European women actively read vernacular medical books such as herbals and advice manuals, in addition to collecting medicinal recipes, since they were expected to have general medical knowledge in order to fulfill their Christian duties as wives, mothers, and caregivers, both within the home and the community.[^ref3] Recipe collections are particularly telling when assessing the intersection of learned and lay medicine. Recipes collected and circulated by elite women often incorporated, combined, or refined medicinal knowledge found in herbals. For example, in a set of seventeenth century handwritten recipes dealing with issues of conception, the author, Rebeckah Winche (died c. 1713), listed the ingredients for a potion used for ["purging the wombe from all hurtfull or superfillus humers which hinder conception."](https://luna.folger.edu/luna/servlet/detail/FOLGER~3~3~31~260067?qvq=q%3Adittany%3Bsort%3Acall_number%2Cmpsortorder1%3Blc%3AFOLGER~3~3&mi=6&trs=10) The ingredients for the potion included mugwort, pennyroyal, and dittany of Crete, all commonly described as substances that provoke menstruation, birth, and afterbirth in early modern herbals.
 
@@ -86,14 +86,14 @@ Gerard’s explicit statement associating provoking menstruation with ending a p
 
 The line between contraception (avoiding pregnancy) and abortion (terminating pregnancy) was not clear in the pre-modern world. In the early modern context, the word abortion was more akin to miscarriage. Because of this, historians argue that using herbs to terminate an early pregnancy was not only socially acceptable, it was also legally permissible. Unlike contemporary science, pre-modern theories of conception did not distinguish between an embryo and a fetus. Early modern sources also did not assign full personhood to a fetus. Furthermore, a woman in the early modern world was not pregnant until she declared it. Without our contemporary tests and ultrasounds, detecting pregnancy within the first few months was difficult, and, thus, left up to the mother. Prior to the professionalization of obstetrics, it was a woman, not male physicians, who determined when a fetus became viable. The [quickening](Q7271728)—when a pregnant woman began to feel or perceive fetal movements, usually between fifteen to seventeen weeks (three to four months)—was the most important confirmation of a viable pregnancy and often when women announced it.
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html source=1aH_OUcNvM7gAclhG0HdahdhoAAg4LwVyD9fVRyV44OE timenav-position=bottom hash-bookmark=false initial-zoom=1 height=650`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" class="right" %}
 
 # Did Dittany Work?
 
 No twentieth or twenty-first century scientific studies specifically assess dittany’s ability to provoke menstruation or its efficacy as an early-term abortifacient. It is telling, however, that in most early modern herbals, dittany was often compared to pennyroyal—a plant in the [mint](https://lab.plant-humanities.org/mint/) family—which has also been considered a powerful abortifacient since antiquity. In his herbal, [Mattioli related dittany to "pulegium" or "pulegio,"](https://www.biodiversitylibrary.org/page/51721921) the early modern Latin and Italian names for pennyroyal. Mattioli stated that dittany was even sometimes called "pulegio salvatico," or wild pulegio. According to Mattioli, the difference was that dittany was from the island of Crete and had larger fronds. Mattioli’s contemporary and associate, naturalist [Ulisse Aldrovandi](Q321358), also connected dittany and pulegio. Aldrovandi was an avid collector of nature and is credited with creating the first herbarium. His surviving herbarium specimens have been carefully preserved and digitized. Written under the name "Dictamnum Creticum" of his 400-year-old dried specimen is "Pulegium Sylvestre."
 
 <!-- broken image link
-{% include embed/image.html src="2a8d3ff777f06996b55f34312ded1dfaa6f513ef4d9ec770f15aae46843cd50a.yaml" aspect="" class="right" %}
+{% include embed/image.html manifest="2a8d3ff777f06996b55f34312ded1dfaa6f513ef4d9ec770f15aae46843cd50a.yaml" aspect="" class="right" %}
 -->
 
 While contemporary scientific research has not assessed dittany’s biofactors in relation to reproductive health, researchers have identified pennyroyal’s key active compound, [pulegone](Q413816). A lab experiment by Soares et al.[^ref8] revealed that the [essential oil](Q170885) of pennyroyal and isolated pulegone does have the potential to produce significant effects on the female reproductive system. In fact, many plants high in essential oils have proven abortifacient properties.[^ref9]  Nearly all of the herbs cited as an effective emmenagogue across the herbals of Mattioli, Durante, and Gerard have high essential oil contents, and mugwort, pennyroyal, and rue remain classed as herbs women should avoid while pregnant today.[^ref10]
