--- a/_posts/2025-07-16-indigo.md
+++ b/_posts/2025-07-16-indigo.md
@@ -76,7 +76,7 @@ In 1860, the Indigo Revolt inspired a new work of art, not of cloth or dye, but 
 
 _Nil Darpan_ was the first commercially staged play at Calcutta's National Theatre and became one of the most popular Indian dramas in the nineteenth and twentieth centuries.[^37] In 1861, the play was translated into English by Michael Madhusudan Dutt and published by missionary Reverend James Long, who was arrested for sedition despite having "omitted," "expunged [and] softened" a "great deal" of the play.[^38] In a statement following his arrest, Long writes that he published the translation as a warning to the British of the "volcano . . . forming beneath [the ryots'] feet."[^39] Indeed, Long's English edition ensured that _Nil Darpan_ became well known, adding a negative hue to the public's perception of British indigo planters once the details came to light. Following the Indigo Revolt, the English investigated the injustices being perpetrated on farmers by indigo plantation owners, leading to an 1861 report of the Indigo Commission. The report quotes EWL Tower, the magistrate of Faridpur, that "not a chest of indigo reached England without being stained with human blood."[^40]
 
-`iframe src=https://books.google.com/books?id=q5ZeAAAAcAAJ&pg=PP5&output=embed aspect=0.62`
+{% include embed/iframe.html src="https://books.google.com/books?id=q5ZeAAAAcAAJ&pg=PP5&output=embed" aspect="0.62" class="right" %}
 
 # Gandhi’s Peaceful Revolution and Champaran Satyagraha 
 
