--- a/_posts/2025-07-16-katsura.md
+++ b/_posts/2025-07-16-katsura.md
@@ -32,7 +32,7 @@ And how did it get there? This essay is an attempt to answer that question and p
 
 The katsura is one of the two species that belong to the genus [_Cercidiphyllum](Q526549)_, the other being _Cercidiphyllum magnificum_. The genus refers to the two species having heart-shaped leaves similar to the Judas tree (_[Cercis siliquastrum](Q29488)_). Samuel B. Parsons’s Kissena Nursery in Flushing, New York, was probably the first commercial nursery to sell katsuras in the United States; one of the nursery’s descriptive catalogs compares the katsura to a Judas tree.[^ref2] Its species name, japonicum, refers to the katsura being native to Japan. Found in the country’s mountainous regions, its light and soft wood is used in cabinetry and the interior finish of buildings. The tree also grows in Southern China’s moist <span eid="Q3079086">mixed forests](Q858028) of Southern China, disturbed and secondary mixed forests, and along bodies of water in the mountains.[^ref3]
 
-`image-compare before=wc:CercidiphyllumJaponicumLeaves.jpg after=wc:Cercis_Siliquastrum_leaves.JPG aspect=`
+{% include embed/image-compare.html before="wc:CercidiphyllumJaponicumLeaves.jpg" after="wc:Cercis_Siliquastrum_leaves.JPG" class="right" %}
 
 A deciduous tree, the katsura sheds leaves in the fall—and its leaves decompose and release the chemical maltol into the air leaving a sweet smell. Farrand accounted for this in her design of Dumbarton Oaks' East Lawn, adding plants that brought out its beauty and provided an “additional evergreen screen” when the tree had no leaves.[^ref4] The katsura is a dioecious tree, meaning the individual trees produce either male or female flowers in the springtime. While its flowers have no petals, the colors are lovely: the male flowers are purple-red and the female flowers are yellow-green. As Dumbarton Oaks’ katsura is a male, one slight sway of the tree’s branches and pollen flies all over.  
 
@@ -71,7 +71,7 @@ It was once thought that Dumbarton Oaks’ katsura was planted by Edward Linthic
 
 In 1862, President Abraham Lincoln appointed [Thomas Hogg Jr.](Q21515943) (whose father established one of New York City’s first nurseries) to the Japanese Consulate in Kanagawa in 1862. During his post, which he occupied until 1869, he sent seeds of Japanese flora to his brother James, who grew them in his home garden. It was during Hogg Jr.’s second trip to Japan, as he “worked as an independent advisor to the Japanese Customs Service,” in the 1870s that he acquired katsura seeds.[^ref17] He sent these to Samuel B. Parsons, the owner of the Kissena Nursery, because he had experience with propagating and growing Japanese plants.[^ref18] Parsons began selling one-foot tall katsura in 1874. In an 1879 letter published in _The Gardener’s Monthly and Horticulturalist_, Hogg Jr. denied botanist [Charles Sprague Sargent’s](Q1066128) claim that agricultural scientist [William S. Clark](Q901202) introduced katsura to the United States.[^ref19] [^ref20] In reference to Sargent visiting James’ garden after Thomas returned from his second trip to Japan, Hogg Jr. remarked that “it seems incredible that so remarkable a plant could have escaped the notice of so enthusiastic an admirer of trees.”[^ref21]
 
-`iframe src=gardenersmonthly21meeh_0083.jpg aspect=0.7`
+{% include embed/iframe.html src="gardenersmonthly21meeh_0083.jpg" aspect="0.7" class="right" %}
 
 A 1922 [topographical survey](Q112127197) of Dumbarton Oaks, providing the diameters of trees throughout the property, marks an unnamed tree (simply referred to as “Tree”) where the katsura is located.[^ref22] The 1922 survey gives the “Tree” a diameter of twenty inches, which would make it at least twenty to thirty years old at that point. However, dating a tree with only a diameter is difficult without knowing the exact conditions in which the tree grew. The estimate provided here is only accurate if the tree grew healthily when its diameter was measured in 1922.[^ref23] If the tree was well taken care of before the Bliss’ purchase of the property, Dumbarton Oaks’ katsura is at least 120 years old—though, the age provided here is only a guess. Given this estimated age of Dumbarton Oaks’ katsura, and the chronology of katsura’s introduction to the United States, the Blount family is the most likely candidate for planting the tree. Henry Fitch Blount purchased the Oaks in 1891 from Linthicum—around the same time the katsura would have been planted (but only if the twenty-thirty age estimate derived from the 1922 survey is accurate). Lucia Blount, Henry’s wife, was “interested in developing the grounds further as gardens” and collected trees from nearby property owners.[^ref24] The time when the Blount family purchased Dumbarton Oaks, along with their improvements of the grounds which include the introduction of boxwoods into the garden, make them a likely suspect. This also fits in with when the Washington Nursery, owned by John Saul, one of the District’s well-known nurserymen, first included the katsura in his wholesale catalog in 1895, which notes the tree being a “recent introduction.”[^ref25]
 
