--- a/_posts/2025-07-16-maize.md
+++ b/_posts/2025-07-16-maize.md
@@ -29,7 +29,7 @@ While the law sought to regulate the use of particular [maize](Q11575) seeds eng
 
 Why did this new policy about maize inspire such strong reactions? Since its [domestication](Q11395) over 9,000 years ago, achieved through the ingenuity and acumen of Mesoamerican communities, maize has provided necessary sustenance. In turn, these communities constructed their societies, cosmologies, and cultures around the plant. The Monsanto Law would dissolve this sacred symbiosis between local communities and maize. The history of maize thus demonstrates the complexities of human relationships to plants, which resist categorization solely as units to be bought, sold, or patented under capitalism.
 
-`image-compare before=DT9946.jpg after=wc:Neuch%C3%A2tel_Herbarium_-_Zea_mays_-_NEU000092649.jpg aspect=`
+{% include embed/image-compare.html before="DT9946.jpg" after="wc:Neuch%C3%A2tel_Herbarium_-_Zea_mays_-_NEU000092649.jpg" class="right" %}
 
 # A Kernel of Science
 
@@ -40,7 +40,7 @@ What is maize? How did it develop? These questions may seem simple, particularly
 The reliance of many human societies on maize, the "[most dominant and productive crop](https://futureoffood.org/insights/the-global-importance-of-maize-diversity/#:~:text=As%20the%20world's%20most%20dominant,%2C%20sweeteners%2C%20starch%2C%20and%20for)" for their survival, is well known. Less understood is the plant’s reliance on humans for its survival. Maize most likely was domesticated from [teosinte](Q7701197), a grass with tassels and several small-clustered ears. However, there are clear differences between modern-day maize and teosinte: while tesonite is made up of 6–12 kernels held in two rows surrounded by a protective shell, maize proffers a cob with approximately 20 rows of kernels without a hard outer shell.[^ref3] These differences are so profound that, as [one article in _PNAS_](https://doi.org/10.1073/pnas.0901122106) notes, "19th-century botanists failed to recognize the close relationship between these plants, placing teosinte in its own genus, [_Euchlaena_.](https://www.ipni.org/n/18060-1)" Present-day scholars have shown that maize was domesticated from teosinte through humans selecting for a larger ear size and more kernels.
 
 <!-- image no longer available
-{% include embed/image.html src="4614001e695a239ebb2c971840cffa1780df8763a65513d47f97e70ae9ee3f51.yaml" aspect="" class="right" %}
+{% include embed/image.html manifest="4614001e695a239ebb2c971840cffa1780df8763a65513d47f97e70ae9ee3f51.yaml" aspect="" class="right" %}
 -->
 
 Indigenous groups in what is now southwestern Mexico played a major role in the domestication process and subsequent plant transfer. Recent [phylogenetic analysis](Q171184) has shown that maize most likely arose from a single domestication event, which probably occurred in the Rio Balsas (Balsas River) Valley around 9,000 years ago.[^ref4] Agrobiodiversity researchers have noted that "much of the evolution of maize during domestication may have been gradual, and there is evidence of increases in cob size over the first 2,000 years of selection."[^ref5] An incredible diversity in terms of types of maize occurred after its initial domestication. Many scholars describe maize as a "mirror" to its cultivators, and different Indigenous groups domesticated and cultivated various types of maize depending on "environmental and also [on] social and cultural factors," suggesting the role communities played in developing different types of maize most suited to their needs.[^ref6]
@@ -76,13 +76,13 @@ The nutritional importance of maize cannot be separated from its cultural signif
 
 For the Maya, maize was and is more than simply a metaphor and powerful image in the Mesoamerican visual lexicon. Seventeenth-century records reveal how in highland Guatemala, upon the birth of a son, the Maya community would burn the blood of the umbilical cord. Then, they would "pas[s] an ear of maize through the smoke," which would subsequently be planted in the maize field. Ethnographers have recorded that "parents used the maize from this small patch of land to feed the child ‘until he reached the age when he could plant for himself, saying that thus he not only ate by the sweat of his brow, but of his own blood as well.’"[^ref13] In certain regions, mothers "place an ear of maize into the palm of their newborns, and eat only dishes made from maize while breast-feeding to ensure that the child grows ‘true flesh.’"[^ref14]  Maize, for Maya people, thus represents more than both calories or symbol: it is a sacred plant from which all life grows. 
 
-{% include embed/image.html src="diagnosis-and-the-divine.yaml" aspect="0.82" class="right" %}
+{% include embed/image.html manifest="diagnosis-and-the-divine.yaml" aspect="0.82" class="right" %}
 
 # Colonial and Postcolonial Eras
 
 During the colonial era, Maya beliefs in maize as a sacred plant clashed with European understandings of the crop. Spanish colonizers often publicly denigrated foods like maize as "dangerous to the European constitution."[^ref15] But even as the Spanish publicly disdained maize, there is ample evidence that they recognized the utility—and scrumptiousness—of the crop. [Inca Garcilaso de la Vega](Q334711) (1539–1616) recounted how one group of conquistadors inhaled maize "as if it were sugared almonds."[^ref16] Indeed, there are records of [conquistadors](Q126236) enjoying [atole](Q2312651), a maize beverage, and eating puddings made of maize.[^ref17]
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html source=1qXFTF6KY_htcJqVlZjSM_qZJvOyKdxXRaNGxkxbbluo timenav-position=bottom hash-bookmark=false initial-zoom=1 height=650`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" class="right" %}
 
 From the nineteenth century onward, the crop began to attract the attention of scientists from Europe and the United States due to its productivity and economic potential as a domestic and export crop. In the early twentieth century, scientists from the United States and Europe traveled to regions in Mexico, Peru, and Guatemala, among others, to identify unique "landraces," or locally adapted domesticates, of maize. Historian of science Helen Curry has detailed how scientists attempted to transpose putative science of the human race onto maize taxonomies: "At the most fundamental level, the raw material and motivation for classification arose directly from the imperative of ‘improvement’ in both crops and people."[^ref18] These scientists presented a vision of "early, stable indigenous races, transformed by racial mixing with newly arriving populations from other geographical regions, giving rise to valuable new ‘incipient’ but still-unstable racial types."[^ref19] 
 
@@ -94,11 +94,11 @@ Bolstered in part by this racialized understanding of maize, scientists around t
 
 These examples illuminate the resistance of communities in Central and South America to the commodification of maize. Maize became a symbol of Central American cultural and political independence in the 1980s, when U.S. President [Ronald Reagan](Q9960) prohibited trade with Nicaragua in an attempt to erode the power of the [Sandinistas](Q27389), a left-wing political group. What this meant in practical terms was that Nicaragua was unable to obtain a sufficient supply of wheat, usually imported from the United States. In response, Nicaraguan artist [Luis Enrique Mejía Godoy](Q4292179) released a song titled "Somos Hijos Del Maiz" ("We Are the Children of Corn") to rally support for the Sandinistas and resist American political influence. The song begins with the lyrics (in English), "If they take away our bread/We will see ourselves in the obligation/to survive as our grandparents did/with fermented corn/in the blood of the heroes." The sanctity of maize became a way to express independence from colonial and neo-colonial powers.
 
-`youtube vid=ST_3wN3lEFo caption="Somos Hijos Del Maiz"`
+{% include embed/youtube.html id="ST_3wN3lEFo" caption="Somos Hijos Del Maiz" class="right" %}
 
 Maize’s cultural, political, and economic significance persists in Central American communities today. Maya farmers continued to practice Milpa agriculture and it has been hailed as "[central](https://allianceforscience.cornell.edu/blog/2017/10/a-mexican-legacy-la-milpa-the-birthplace-of-maize/#:~:text=The%20importance%20of%20the%20milpa,an%20amazing%20variety%20of%20peppers)" to the preservation of Mexico’s biodiversity. However, this is not to say that the symbiotic relationship between Indigenous communities and the plant has remained unchanged—scholars have noted the immense out-migration of farmers in maize-growing communities, which can lead to a "narrowing of the agroecological conditions under which maize is farmed."[^ref22] Further, multinational corporations have industrialized and commodified traditional beverages like atole.
 
-`iframe src=https://ourworldindata.org/grapher/urban-vs-rural-majority?tab=chart&country=~MEX aspect=1`
+{% include embed/iframe.html src="https://ourworldindata.org/grapher/urban-vs-rural-majority?tab=chart&country=~MEX" aspect="1" class="right" %}
 
 # Monsanto: Rise and Resistance
 
@@ -108,11 +108,11 @@ As a result of the forces of globalization and industrialization, threats to mai
 
 This contamination has alarmed scientists, farmers, and activists around the world for a variety of reasons. [Zapatistas](Q188590) fighting for autonomy in Mexico argued that transgenic industrial maize threatened to overwhelm local varieties and thereby make Central American economies reliant on U.S. corporations. Since the 1970s, agronomists have been concerned about the potential loss of crop diversity and the catastrophic consequences for global food security. And local farmers and community members worry about relying on global agribusiness for their main source of sustenance, as well as the potential disruption to their moral economies and local cosmologies.[^ref25]
 
-`iframe src=https://ourworldindata.org/grapher/maize-yields?tab=chart&country=GTM~MEX~BLZ~USA aspect=1.2`
+{% include embed/iframe.html src="https://ourworldindata.org/grapher/maize-yields?tab=chart&country=GTM~MEX~BLZ~USA" aspect="1.2" class="right" %}
 
 The 2014 protests in Guatemala are not the only example of dissent over transgenic maize. Historian Helen Anne Curry describes local movements in Mexico that, in the early 2000s, declared "sin maíz no hay país" ("without maize there is no country").[^ref26] According to Curry, Zapatista rebels "took matters into their own hands" by "developing locally managed preservation measures ...that connected Indigenous peoples with scientists and activists."[^ref27] And, as reported by Timothy Wise, from the Institute for Agriculture and Trade Policy, Mexican president [Andrés Manuel López Obrador](Q318508) promised to gradually eliminate the use of [glyphosate](Q407232) and the production of GMO maize.[^ref28]
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html source=1myU459GVMpHM4947aUaReTHcQncTcwrbtbOGTEo4hBA timenav-position=bottom hash-bookmark=false initial-zoom=1 height=650`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" class="right" %}
 
 While some protests against Monsanto’s promotion of transgenic maize have been successful, Liza Grandia has observed that it is "hard to predict whether [events like] the victory over Monsanto in Guatemala [were] a once- or twice-in-a-generation occurrence or a signal of expanded democratic unrest."[^ref29] What is clear, however, are the perils of detaching maize, a complex crop of global significance, from the rich cultural and biological context of its original domestication and the sophisticated practices of Indigenous agriculture and land management. Maize, as a sacred crop, is more than mere fodder for scientific development: rather, it is the lifeblood of many communities.[^ref30]
 
