--- a/_posts/2025-07-16-okra.md
+++ b/_posts/2025-07-16-okra.md
@@ -11,7 +11,6 @@ thumbnail: okra.jpg
 permalink: /okra
 tags: vegetable tropical heat-tolerant
 published: true
-featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/okra
 image:
   path: wc:Okra_%28Abelmoschus_esculentus%29_%283%29.jpg
@@ -22,7 +21,7 @@ image:
 
 Delta State University (DSU) in Mississippi has an unusual mascot: the "Fighting Okra." While the school's mascot was the "Statesman," students insisted on a mascot that they thought better represented their southern roots and the toughness of their athletes.[^1] Today, DSU has proudly made the Fighting Okra the face of its campus, with promotional materials proclaiming somewhat tongue in cheek, "Fear of the okra may not be actual fear, but it’s enough to get a crowd going."[^2] Although the connection between okra, the South, and toughness may seem obscure,  okra has been a source and symbol of strength for many disenfranchised communities, as well as for members of the African diaspora in the Americas. The vegetable has developed a reputation as a "robust, productive, fast-growing, [and] high yielding [crop]... [one that is] seldom felled by pests and diseases. It adapts to difficult conditions and can thrive where other food plants prove unreliable."[^3] More broadly, it has served as an example of and testament to cultural resilience, as Africans forcibly displaced by the slave trade kept growing and cooking okra and preserving, as well as innovating, their culinary traditions. Thus, the crop has evolved into a cultural phenomenon that communities around the world continue to embrace as a treasured reminder of home, heritage, and enduring spirit.
 
-`youtube vid=pS589zKAlnY caption="The Fighting Okra" aspect=1.6`
+{% include embed/youtube.html id="pS589zKAlnY" caption="The Fighting Okra" aspect="1.6" class="right" %}
 
 # Origins
 
