--- a/_posts/2025-07-16-peanut.md
+++ b/_posts/2025-07-16-peanut.md
@@ -21,7 +21,7 @@ image:
 
 Despite its English name and nutlike taste, the peanut is not a nut. This mighty [legume](Q145909) is grown around the world for a variety of uses including human consumption, oil production, and animal feed. It also plays an important role in crop rotation due to the nitrogen-fixing bacteria in its root nodules. The taxonomic name of the cultivated peanut, _[Arachis hypogaea](Q37383)_–hypo meaning under and gaea meaning earth–reflects this tropical plant’s ingenious means of reproduction: its aerial flowers undergo fertilization above the ground and burrow into the soil to bear their fruit.
 
-`image-compare before=https://ids.lib.harvard.edu/ids/iiif/493720148/full/1000,/0/default.jpg after=wc:Arachis_hypogaea_003.JPG`
+{% include embed/image-compare.html before="https://ids.lib.harvard.edu/ids/iiif/493720148/full/1000,/0/default.jpg" after="wc:Arachis_hypogaea_003.JPG" class="right" %}
 
 While the largest peanut-producing nations are now China, India, Nigeria, and the United States, the plant was first cultivated by Andean civilizations in South America.[^1] Its migration around the world altered global food production and supply forever, rendering it one of the most successful of New World plants disseminated via the [Columbian Exchange](Q767253). More than just a food source, the peanut has been a protagonist in histories of global trade, slavery, and colonization and has come to be imbued with rich cultural meanings.
 
@@ -91,7 +91,7 @@ An influential Black public figure during the age of [segregation](Q59816), Carv
 
 Peanut production in the United States increased with the advent and popularization of peanut butter in North America.[^19] While George Washington Carver is sometimes credited with the invention of peanut butter, U.S. patents for "peanut paste" and "nut butter" began to appear in the late nineteenth century. They included recipes calling for roasting and shelling the peanuts, and then grinding the nuts until they congeal into a paste, with salt and oil as optional additions. At first a tea-time delicacy, peanut butter was marketed as a protein-packed meat replacement during the food rationing of [World War I](Q361), and its utility as a cheap energy source [made it ubiquitous](http://libcdm1.uncg.edu/cdm/ref/collection/HENP/id/681) during the [Great Depression](Q8698).
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html source=1T9E8QZRT7ZFFmb55uLpJUSnELKuqSsXlLmNuVXvOC_I timenav-position=bottom hash-bookmark=false initial-zoom=1 height=650`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" class="right" %}
 
 Throughout the first half of the twentieth century, a series of relentless American ad campaigns marketed peanut butter as suitable for all kinds of dishes, from peanut butter sandwiches and chocolate-peanut candies to savory roasts and soups. The [American Empire](Q605269) shaped the peanut-related foodways of its colonies as well, including the Philippines.[^20] And the peanut is comparatively prevalent in Germany due to the historical and contemporary presence of American troops.
 
@@ -105,7 +105,7 @@ A characteristic feature in the history and contemporary life of peanuts is thei
 
 In contrast to the peanut vendor’s low social standing in the late nineteenth-century United States, the popularity of the street vendor in 1920s Havana is brilliantly conveyed in the song ["El Manisero" ("The Peanut Vendor")](Q3050049) by the Cuban composer and songwriter [Moisés Simons](Q661928).[^22] The 1927 composition is sung from the perspective of the seller and is a blending of the _[son](Q4428744)_ and _[pregón](Q5681688)_ genres. The lyrics tell of a vendor trying to tempt a housewife to buy a cone of peanuts: his repeated sales cry of "_maní_, _maní_, _maní_" is a typical feature of _pregones_. Like the song "El Manisero," fusing African and Hispanic musical traditions, the peanut vendor and peanuts in 1920s Cuba would have held a blend of different cultural associations.
 
-`youtube vid=essMVyS1Om0 caption="The Peanut Vendor - Don Azpiazu (Antonio Machin, vocal), 1931, the78prof, YouTube." aspect=1.6`
+{% include embed/youtube.html id="essMVyS1Om0" caption="The Peanut Vendor - Don Azpiazu (Antonio Machin, vocal), 1931, the78prof, YouTube." aspect="1.6" class="right" %}
 
 Besides selling peanuts on streets and roadsides, vendors in the United States also were working in other public spaces like circuses, zoos, theaters, and fairs at the end of the nineteenth century. Because the vendors mainly sold peanuts in the shell, it became commonplace for purchasers to eat the delicious nuts and discard the shells on the ground. By the mid-1920s, many cities prohibited the sale of in-shell peanuts to curb littering.[^23] While peanut shells were considered litter in public spaces, the hull and broken peas left over from the industrial de-shelling process were used in the preparation of livestock feed, especially during years of low-quality crops or poor prices.
 
@@ -117,7 +117,7 @@ Besides selling peanuts on streets and roadsides, vendors in the United States a
 Peanuts played a critical role in the British Empire, as well, as demonstrated by the [Tanganyika groundnut scheme](Q2392428). In 1946, British businessmen and officials [developed a plan](https://archive.org/details/notjustpeanutsst00brit/mode/1up) to clear vast areas of vegetation in [Tanganyika](Q431731) for establishing a groundnut monoculture. The aim was to produce enough peanuts to supply Britain, still under government-enforced World War II rationing, with cooking oil and improve food provisions in colonial territories. Historical and environmental geographer Martin Mahoney has [explained](http://www.environmentandsociety.org/arcadia/enemy-nature-military-machines-and-technological-bricolage-britains-great-agricultural) how officials repurposed military technologies to wage a "war" against nature.[^24] Because the British government failed to adequately consider environmental conditions in Tanganyika, crops did not yield as expected and the project was abandoned in 1951.
 
 <!-- Not loading because spreadsheet not found
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html source=1_zJyS56CVfAHJQwZEpvq-1m9PX3dnCEnFyCtir5seaw& timenav-position=bottom hash-bookmark=false initial-zoom=1 height=500`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" class="right" %}
 -->
 
 # Multispecies Consumption
@@ -130,7 +130,7 @@ Humans and livestock are not the only consumers of the peanut plant for its nutr
 
 Despite the use of the word [peanut](https://www.merriam-webster.com/dictionary/peanut) to denote a small or meager amount in the English language, we have seen over the course of this essay that the peanut has a rich history that is intricately tied to histories of global trade, slavery, and colonization. From luxury food to livestock feed, the social, cultural, and economic life of this legume has taken on many incarnations. Yet its importance to humans and its [ecosystems](Q37813) is hard to overstate. The peanut plant heals and replenishes soils and has therefore been cultivated as a global environmental intervention method to maintain soil health. Highly nutritious and protein-packed, it is beneficial to the many life-forms that consume it–including to humans in their varied culinary preparations.
 
-`image-compare before=wc:A_Peanut_Plant%2C_illustration_from_The_Encyclopedia_of_Food_by_Artemas_Ward_01.jpg after=wc:Arachis_hypogaea_006.JPG`
+{% include embed/image-compare.html before="wc:A_Peanut_Plant%2C_illustration_from_The_Encyclopedia_of_Food_by_Artemas_Ward_01.jpg" after="wc:Arachis_hypogaea_006.JPG" class="right" %}
 
 [^1]: R. O. Hammons, "The Origin and History of the Groundnut," in *The Groundnut Crop: A Scientific Basis for Improvement*, ed. J. Smartt (Dordrecht: Springer Netherlands, 1994), 24–42. [https://doi.org/10.1007/978-94-011-0733-4_2](https://doi.org/10.1007/978-94-011-0733-4_2)
 [^2]: David John Bertioli, Steven B. Cannon, Lutz Froenicke, et al., "The Genome Sequences of _Arachis duranensis_ and _Arachis ipaensis_, the Diploid Ancestors of Cultivated Peanut," *Nature Genetics* 48, no. 4 (2016): 438–446. [https://doi.org/10.1038/ng.3517](https://doi.org/10.1038/ng.3517)
