--- a/_posts/2025-07-16-peony.md
+++ b/_posts/2025-07-16-peony.md
@@ -74,7 +74,7 @@ While peonies have a long history of appreciation and cultivation as ornamental 
 
 In 1789, famed British naturalist [Sir Joseph Banks](Q153408) acquired a "moutan peony tree" (_[Paeonia lactiflora](Q163076)_, left) from Canton, China, through his connections with the [British East India Company](Q83164). Surviving the arduous journey to Britain, it was planted in the Royal Botanic Garden, Kew. Other peonies from China soon followed, ushering in something of a peony craze in Europe as, thanks to centuries of cultivation, Chinese peonies were larger, fuller, and more fragrant than native European varieties. Peonies became increasingly popular as French, English, and American horticulturists began developing ornamental varieties of their own from these exotic imported peony cultivars.[^3]
 
-`image-compare before=linn-hs959-3.jpg after=bm000628767.jpg`
+{% include embed/image-compare.html before="linn-hs959-3.jpg" after="bm000628767.jpg" class="right" %}
 
 As a Chinese botanical export, eastern ornamental peonies, as well as the new herbaceous and tree hybrids created from them in Europe, carried connotations of the "exotic Orient" and became a popular subject in nineteenth-century art. The depiction of peonies in nineteenth-century French paintings, however, does more than simply signify the exotic or differentiate [Occident](Q160381) and [Orient](Q205653).[^4] For example, in [Frédéric Bazille’s](Q207298) _Young Woman with Peonies_, the foreign provenance of ornamental peonies is emphasized by the Black model who arranges the blooms in an ["Oriental" vase](img3/zoomto/22,583,979,821). Noteably, Bazille pairs the peonies with [irises](img3/zoomto/138,0,979,821), France’s national flower. Once new and exotic, ornamental peony cultivars had become a product of cultural hybridity, simultaneously signaling the plant’s eastern origin as well as the new varieties that were being developed in France.[^5] 
 
@@ -119,7 +119,7 @@ In addition to the cleansing and purgative properties associated with peony and 
 
 For more than 2,000 years, numerous peony species were used as a powerful herbal therapeutic across societies in Europe and Asia. [Herbal medicine](Q861699) in the western tradition, however, changed dramatically over the course of the late-eighteenth and nineteenth centuries as European chemists, botanists, and physicians began favoring the creation of standardized and systematic medical experimentation to assess the efficacy of plant medicines and identify and isolate their active chemical compounds. This led to an emphasis on the individual organic compounds within plants and the organic chemical synthesis of these compounds to produce more effective drugs. It also marked the birth of modern pharmaceuticals, many of which are derived or synthetic analogues of naturally occurring chemical structures. The ability to isolate, purify, and synthesize chemical structures created [highly efficacious and powerful drugs](Q507443). And so, herbal simples and compound herbal medicines were replaced and increasingly viewed as outdated, crude, ineffectual, and, in some cases, even dangerous.
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1kjtI9t7HgoZRiDeDyGjXXabVm2b3nZqTYFxnmxQUFFI&timenav-position=bottom&hash-bookmark=false&initial-zoom=1&height=500 height=500`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1kjtI9t7HgoZRiDeDyGjXXabVm2b3nZqTYFxnmxQUFFI&timenav-position=bottom&hash-bookmark=false&initial-zoom=1&height=500" class="right" %}
 
 Despite modern western medicine tending to dismiss early therapeutics like Anna Maria Luisa de Medici’s infant convulsion powder, numerous scientific studies on several species of peony used medically in East Asia have revealed isolated compounds that possess anti-tumor, anti-oxidant, anti-inflammatory, hepatoprotective, and anti-diabetic properties.[^11] Peony roots and flowers continue to be used as a medicinal simple in [Traditional Chinese](Q200253) and [Ayurvedic](Q132325) medicine. While fewer studies have been conducted on European species of peony used medicinally, several studies have tested for the bioactive compounds responsible for _P. officinalis’s_ effect on seizures.
 
