--- a/_posts/2025-07-16-quinoa.md
+++ b/_posts/2025-07-16-quinoa.md
@@ -19,7 +19,7 @@ image:
 
 [Quinoa](Q139925) had its big break in 2013, when the [Food and Agriculture Organization](Q119847893) of the United Nations (FAO) declared it the International Year of Quinoa, and a flurry of newspaper and scholarly articles talked about this new food. It seemed to appear out of nowhere, and it had wonderful nutritional properties—high protein, essential vitamins and minerals, gluten-free.[^1] For its exceptional nutrition and exoticism, people began calling quinoa a “[superfood](Q3772675),” an idea whose roots date back to [marketing campaigns for bananas in the early twentieth century](https://www.hsph.harvard.edu/nutritionsource/superfoods/). For several years prior to FAO's announcement, and especially following 2013, consumers in the Global North began adding it to salads for a protein boost, substituting it for rice to eliminate carbs, and experimenting with it in baked goods. And yet, these new consumers hardly knew where it came from, the farmers who cultivated it, what quinoa meant to the farmers before the quinoa boom, and the impact of the food trend on these communities.
 
-`youtube vid=KKnXFrwQivA aspect=1.7`
+{% include embed/youtube.html id="KKnXFrwQivA" aspect="1.7" class="right" %}
 
 In fact, quinoa has a long history, dating back several thousand years to the [Andean](Q5456) region of South America, where it was typically grown as a subsistence food by farmers in what is today Peru, Bolivia, Ecuador, Chile, and Argentina. The quinoa boom has brought new opportunities and challenges to the Andes, making the situation a complex interplay between local farmers, state policies, and international consumer preferences. The anthropologist Emma McDonnell argues that quinoa has become a “miracle crop,” a plant that various groups think can solve myriad problems, but the realities regarding quinoa have been much more tempered than the lofty aspirations of some promoters.[^2] Plants are crucial to our diets, and yet we rarely think about how the nutritional interests of one country can impact the nutritional interests of another far away. Understanding how quinoa transformed from an isolated Andean subsistence crop to an international “superfood” is important when considering issues of food justice, sustainability, and the next food trend or diet fad that mythologizes a "forgotten" plant like quinoa.
 
@@ -60,7 +60,7 @@ In an illustrated chronicle written in 1615 in the form of a letter to the king 
 
 In general, Spanish colonizers rejected all types of Indigenous foods in part because they associated it with Indigenous people and in part because they suspected that the foreign foods would harm their bodies.[^12] Over time, countless New World foods, such as maize, chocolate, peppers, tomatoes, pineapples, and potatoes, became widely popular in Europe.[^13] Some of the earliest Spanish explorers and chroniclers of the Andes were fascinated by quinoa, but it took much longer for quinoa to become popular outside the Andes compared to other plants. Garcilaso explained that both Indigenous people and Spaniards enjoyed quinoa in various soups and stews “for they are tasty and very nourishing.”[^14]
 
-`iframe src=https://archive.org/details/royalcommentarie0000vega/page/498/mode/2up?view=theater aspect=0.6`
+{% include embed/iframe.html src="https://archive.org/details/royalcommentarie0000vega/page/498/mode/2up?view=theater" aspect="0.6" class="right" %}
 
 Whether the Spanish enjoyed quinoa as much as Garcilaso suggests is not entirely clear. For one, the tribute policy and the continual decline in quinoa production throughout the colonial period suggest that the Spanish did not quite so appreciate quinoa. Sometimes called the first “[mestizo](Q106713)”—a person of mixed Indigenous and Spanish descent—Garcilaso sought to defend racial mixing at a time when Spaniards marginalized mestizos. His excellent early account of Indigenous customs, including quinoa consumption, describes how Indigenous people made quinoa into a beverage, brewing it along with maize into a beer known as [chicha](Q516592). Today, chicha remains an important part of Andean societies, although it is most often made exclusively with corn. During ceremonies, and before taking a sip, attendees spill several drops of chicha onto the ground as an offering  to [Pachamama](Q266462), a deity in Indigenous Andean cosmologies that is similar to the idea of "Mother Earth."[^15]
 
@@ -102,7 +102,7 @@ Ecologically, quinoa can adapt to many types of growing environments because the
 
 To arrive at the International Year of Quinoa, the plant rode several waves to international stardom. First, there was a growing interest in non-Western mysticism among American counterculture movements in the late twentieth century. Although there is no definitive history of how quinoa became so popular among American consumers, according to some accounts, this worldview was an impetus for introducing quinoa into health-food grocery stores in the 1980s.[^26] Second, diet trends like low-carb or gluten-free diets pushed eaters toward alternative grains, and quinoa, having no gluten and low amounts of carbohydrates, made it a good candidate for several food fads. Finally, quinoa became associated with fine dining thanks to a recent culinary movement in Peru called “novoandina” cuisine, which combines European fine dining aesthetics and tastes with traditional Andean ingredients.[^27] “Quinotto,” a risotto made from quinoa and created by Bernardo Roca Rey in the 1980s, is considered the dish that sparked the novoandina gastronomy movement that has since made Peruvian cuisine world famous.
 
-`youtube vid=IPAY5VsDbHw aspect=1.7`
+{% include embed/youtube.html id="IPAY5VsDbHw" aspect="1.7" class="right" %}
 
 Since the International Year of Quinoa, journalists and scholars have debated whether the quinoa boom has improved or exploited the lives of Indigenous quinoa farmers. Proponents argue that profits return to the communities, stimulating economic growth and reducing poverty. However, critics point out that Western consumption of quinoa is example of the economic exploitation of an important Indigenous resource that does not adequately compensate the communities that have cultivated it for centuries. Finding a middle ground between promoting [sustainable development](Q131201) without harming the communities themselves, therefore, is no simple task.
 
@@ -110,7 +110,7 @@ Since the International Year of Quinoa, journalists and scholars have debated wh
 
 One potential problem for quinoa growers in the Andes aside from [cultural appropriation](Q5193258) is the introduction of commercial quinoa farming in the United States, China, and elsewhere. These markets may be able to produce more quinoa at a lower price and outcompete Andean farmers. While this has not happened yet, it is not an entirely unfounded fear. In 1994, American researchers patented an improved variety of quinoa based on seeds cultivated by Bolivian farmers, and in response, the [National Association of Quinoa Producers (ANAPQUI)](https://anapqui.org.bo/en/) in Bolivia fiercely challenged the patent, arguing that it stole intellectual property from the Indigenous farmers. The patent was upheld but the owners let it expire in 1998. Spurred by the memory of this event, the 2009 Bolivian constitution makes explicit that the state controls, monitors, and regulates biological and genetic resources.[^28] This may prevent international [biopiracy](Q864679), the unauthorized exploitation of biological knowledge or resources. But even the state-controlled solution is not perfect. As Emma McDonnell writes in the Peruvian context, “As indigenous farming communities lose control over quinoa’s genetic resources, they become consumers of seeds created in state and private laboratories and no longer are they the key decision-makers regarding quinoa [plant genetic resources].”[^29]
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1kN24KiQMoXiGD7HHKts5mMSlaGsqpy748vj40tLqO-U&timenav-position=bottom&hash-bookmark=false&initial-zoom=1&height=500 height=500`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1kN24KiQMoXiGD7HHKts5mMSlaGsqpy748vj40tLqO-U&timenav-position=bottom&hash-bookmark=false&initial-zoom=1&height=500" class="right" %}
 
 The patent disputes and present-day issues of Indigenous and state sovereignty over potentially valuable plant resources show that the ethical dilemmas of quinoa consumption go beyond questions of profits and fair compensation in the short-term. Copper mining near quinoa farms threatens the sustainability of quinoa production for Peruvian and Bolivian farmers as the two industries are fundamentally at odds with one another.[^30] Overall, quinoa’s history forces us to question whether and how we can improve global nutrition by eating foods from around the world while protecting the interests of the communities that have stewarded those foods for centuries.
 
