--- a/_posts/2025-08-28-gulmohar.md
+++ b/_posts/2025-08-28-gulmohar.md
@@ -43,11 +43,11 @@ In 1828, Charles Telfair wrote to Hooker about a plant specimen discovered by Bo
 
 In 1829, Hooker included an entry on the *Poinciana regia* in the magazine. The entry was accompanied by Joseph Swan’s stunning engraving of _Poinciana regia_ flowers based on a “magnificent drawing” by Bojer.[^8] In his descriptions, Hooker mentioned that they sometimes published entries on beautiful and rare plants that the English had no hope of cultivating successfully in the country; but this, he claimed, was not the case with the *Poinciana regia*. He would have waited for the plant to blossom before publishing an entry on it, if it “were not the subject of such great interest.”[^9] He expressed hope “of its blossoming in this country” very soon, thanks to the attempt of [Robert Barclay](Q58481113) (a wealthy businessman and amateur botanist) to raise saplings of the seeds sent by Telfair. Barclay’s vast garden [Bury Hill](Q17547713) had been the site of many exotic plants taking root in Britain.[^10]  
 
-`iframe src=https://archive.org/embed/mobot31753002721295/page/2884 caption=The engraving of the Gulmohar from Curtis’s Magazine. Image credit: Wikimedia Commons. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/mobot31753002721295/page/2884" caption="The" aspect=".7" class="right" %}
 
 The hope for the tree’s [naturalization](Q2878495) on British shores, however, did not bear fruit, as Barclay passed away in 1831, and with his death the monetary support for the tree’s growth in the British Isles ended.[^11] In 1833, Telfair and his wife Anna died in Madagascar, both by sudden and strange illness.[^12] 
 
-`iframe  src=https://archive.org/embed/mobot31753002221502/page/122 caption=A eulogy written by Telfair for Barclay, detailing his contributions to Botany and the transplantation of non-native species into the British Isles. Telfair himself passed away two years later, in Madagascar. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/mobot31753002221502/page/122" caption="A" aspect=".7" class="right" %}
 
 European fascination with the plant continued to grow. In the French herbal _Histoire naturelle des végétaux_ (1834), French botanist Édouard Spach wrote of the “magnifique” _Poinciana regia_ and noted that English horticultural establishments possessed its saplings.[^13] In 1837, the tree was included in *[Paxton’s Magazine of Botany](Q13548591)*’s register of flowering plants, which praised it as a splendid plant that “ought to be in every collection.”[^14] Bojer’s French manuscript about the flora of Mauritius and the surrounding islands, *[Hortus Mauritianus](Q20897639)*, was published in 1837, with an entry on the *Poinciana regia*, fittingly called the Flamboyant in French.[^15] By then, however, the tree was already well known across Europe.
 
@@ -57,7 +57,7 @@ European fascination with the plant continued to grow. In the French herbal _His
 
 Towards the end of the decade, in 1838, the [Agricultural and Horticultural Society of India](Q115317665) decided to take on an imperial “experiment” to be conducted “on a magnificent scale”: the gradual introduction and eventual “naturalising” of the world’s “indigenous” plants within India.[^16] As the Society’s leading members wrote in their correspondence, the successful introduction of valuable plants into the “countries they rule… can scarcely be questioned, particularly in the Indian case due to the vegetarian diet of the population, and the fact that more plant species would act as safeguards during “severe visitations of Providence,” like drought and famine. They claimed that due to the “productive power” of the soil, and the vast varieties of landscape, plants “of every climate, except the Arctic, may be so completely naturalised” in the country. This plan would also involve the “interchange of plants between Bombay and Calcutta,” two centers of British power. The [Calcutta Botanic Garden](Q3346386), established in 1787, was a major site of plant exchange, “a center of experimentation with living plants from all over the subcontinent and the world”,[^17] and Bombay was home to gardens scattered across the localities of Parel, Mazgaon, and Colaba, in addition to a botanical garden at the nearby Dapuri, which lay within the [Bombay Presidency](Q891827).[^18]
 
-{% include embed/image.html src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/287858/608144/main-image" caption="The Calcutta Botanic Garden. Viscount Valentia, the Earl of Mountnorris in Northern Ireland, visited the garden in 1808. Image credit: Gilman Collection, The Metropolitan Museum of Art." aspect="1.24" class="right" %}
+{% include embed/image.html manifest="https://collectionapi.metmuseum.org/api/collection/v1/iiif/287858/608144/main-image" caption="The Calcutta Botanic Garden. Viscount Valentia, the Earl of Mountnorris in Northern Ireland, visited the garden in 1808. Image credit: Gilman Collection, The Metropolitan Museum of Art." aspect="1.24" class="right" %}
 
 The Gulmohar snuck into the list of ornamental plants to be introduced to Bombay, during the first wave of the Society’s botanical experiment in 1838.[^19] Within three years, [William Griffith](Q11705310), an East India Company botanist, was growing the tree in the Calcutta Botanic Garden.[^20] Just two years later, Griffith sent a letter to his peer [Robert Wight](Q1375864), the secretary of the botanical gardens in Madras, sharing “plenty of seed” of the “beautiful tree” that was _Poinciana regia_.[^21] In the late 1840s, Scottish surgeon [Alexander Gibson](Q2833120), superintendent of the botanic garden at Dapuri, commissioned an Indo-Portuguese artist to document the Gulmohar, among other plants, in a distinct example of a [company painting](Q861297), with close-up views that evince an intimate engagement with the plant.[^22] Like their counterparts in Mauritius, the work of the botanists in India was driven by colonial policy and their personal desire to study the “treasure” of India’s flora; they often researched local plant species that were not of much interest to the colonial powers for transplantation or trade.[^23] At the same time, their individual botanical ambitions and ideologies often clashed with those of other botanists practicing in India, producing a rich tapestry of personal motivations in the exchange of botanical material.[^24] Botanical passion and colonial directives thus coincided to see the Gulmohar blossom across gardens in the subcontinent.
 
@@ -77,7 +77,7 @@ One possible reason for the ease with which the Gulmohar fit into the Indian con
 
 The plants’ similarity lies in their flowers’ red color. The primary difference between them is morphological: the _Poinciana regia_ is a [deciduous](Q1131316) tree that grows to a height of ten meters, while the _Poinciana pulcherrima_ is a shrub that grows to about three meters.[^28] While they were placed in the same [genus](Q34740) when the *Poinciana regia* was discovered, by the latter half of the nineteenth century, _Poinciana pulcherrima_ had become _Caesalpinia pulcherrima_, and the _Poinciana regia_ had long been renamed _Delonix regia_. In the latter case, however, the old name stuck: the Gulmohar is still commonly called the *Poinciana* in Australia and the Western Hemisphere. 
 
-`image-compare before=wc:Starr-090623-1693-Delonix_regia-flowering_habit-Paani_Mai_Park_Hana-Maui_(24340315673).jpg after=wc:Caesalpinia_pulcherrima_001.jpg caption="_Poinciana regia_ and _Poinciana pulcherrima_ were once confused by name because of the similarity of the flowers' red color."`
+{% include embed/image-compare.html before="wc:Starr-090623-1693-Delonix_regia-flowering_habit-Paani_Mai_Park_Hana-Maui_(24340315673).jpg" after="wc:Caesalpinia_pulcherrima_001.jpg" caption="_Poinciana regia_ and _Poinciana pulcherrima_ were once confused by name because of the similarity of the flowers' red color." class="right" %}
 
 This confusion between the two flowers was common and was a defining feature in the history of their identification—or misidentification. In _A Dictionary of English Names of Plants_ (1884), William Miller listed two [binomial names](Q36642) for the Peacock flower: the _Poinciana pulcherrima_ for the common variety and the _Poinciana regia_ for the royal variety.[^29] The distinction of one being royal was repeated in the 1889 _Journal of the Bombay Natural History Society_, in which _Poinciana regia_ referred to the royal Gulmohar and the _Poinciana pulcherrima_ to the common one.[^30] Interestingly, when Gulmohar is anglicized, it is often misspelled as “gold mohur,” which was also the name for gold coins issued in British India, as well as during the former [Mughal](Q33296) and [Maratha empires](Q83618).[^31] The plant appears several times in George Orwell’s *[Burmese Days](Q1762079)* as the “Gold mohur” with “blood-red” flowers, framing the landscape of [British Burma](Q2376315).[^32]
 
@@ -89,7 +89,7 @@ The *Delonix regia* becomes the Gulmohar through a unique encounter with the Pea
 
 This dynamic plays out similarly in the [Bengali](Q9610) language: the Gulmohar takes on the name of the Peacock Flower. By the early nineteenth century, the Peacock Flower was called the Krishnachura in Bengali.[^36] Krishnachura is a compound of two words: [Krishna](Q42891) referring to the Hindu deity, who is often symbolized through peacock feathers, and chura possibly referring to bangles, particularly a bride’s wedding bangles. As the nineteenth century came to a close, however, Krishnachura became the Bengali name for the Gulmohar, and the Peacock Flower took on a different name: Radhachura.[^37] Interestingly, [Radha](Q113904) is the name of the divine consort of Krishna—the childhood lover whom he does not marry. The couple is commonly represented as the union of two souls that are one: they cannot be separated, just like the lack of possible differentiation between deer-musk and its perfume, and just as “the moon can never be shorn of its very own moonbeam.”[^38] The longing for the lover who is the self represents the dyad of these divine lovers, who are often referred to by the conjoined name Radhakrishna.[^39] In Bengali, the names of the Peacock Flower and the Gulmohar thus come to embody Radha and Krishna, representing a fascinating union of the divine lovers and the unique possibility of desire and identification between the two red flowers. 
 
-{% include embed/image.html src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/65594/1592348/main-image" caption="The divine lovers Radha and Krishna walk in a grove of red flowering trees surrounded by peacocks. Painting circa 1720. Image credit: Cynthia Hazen Polsky and Leon B. Polsky Fund, 2003, The Metropolitan Musuem of Art." aspect=".7" class="right" %}
+{% include embed/image.html manifest="https://collectionapi.metmuseum.org/api/collection/v1/iiif/65594/1592348/main-image" caption="The divine lovers Radha and Krishna walk in a grove of red flowering trees surrounded by peacocks. Painting circa 1720. Image credit: Cynthia Hazen Polsky and Leon B. Polsky Fund, 2003, The Metropolitan Musuem of Art." aspect=".7" class="right" %}
 
 # The Gulmohar as Political Symbol
 
@@ -114,11 +114,11 @@ Across the border in India, the Gulmohar took on a fascinating role in the [cast
 
 Desire, temporality, memory, and longing come together in the symbolic power of the Gulmohar in modern India. Turning to film, music, and literature can give a clearer understanding of its influence and associations. “If your name were Gulmohar,” sings the [Bollywood](Q93196) hero of the 1978 movie _Devata_ as he presents his lover with a Gulmohar flower, “then making the spring laugh would be my task.”[^46] Throughout the song, the lovers frolic around the Gulmohar. The camera pans across the tree, taking wide shots of its blossoming canopy, cutting shots of the sighing lovers under its bouncing branches, and focusing on the falling flowers. By the 1970s, the Gulmohar was a common sight in India, and the song uses the tree not only as a lyrical symbol but as a physical, living character that is very much a part of the action and movement on screen. “When the spring comes next time, ask it one small thing,” sings the hero, “without my flower, how could its name be spring?” The heroine sings back with his own words, “If your name were Gulmohar, then making the spring laugh would be my task!”
 
-`iframe src=https://geo.dailymotion.com/player.html?video=x8mtotz;start=30 style="width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden; border:none;"" allowfullscreen title="Dailymotion Video Player" allow=web-share start=30 aspect=1.6`
+{% include embed/iframe.html src="https://geo.dailymotion.com/player.html?video=x8mtotz;start=30" aspect="1.6" class="right" %}
 
 In another movie from the 1970s, the devotional _Narad Leela_, the Gulmohar is evoked to represent the unrequited desire of an Apsara—a divine nymph of heaven—for the celibate [Narad](Q844066), the messenger of the Gods. They meet when Narad is deep in ascetic meditation. Indra, the King of Heaven, fearing that Narad is gaining too much divine power, instructs Kaamdev, the god of desire, to end Narad’s meditation. Kaamdev thus sends the Apsara to tempt Narad out of his asceticism. The plan of the gods, however, backfires: the [Apsara](Q148773) falls in love with Narad instead. “I came to color your body in my shade/ But mine paled; I have become your shade,” she sings in the song _Gulmohar Ke Lal Lal Phulwa Khil Gaye_, dancing around the meditating Narad.[^47] Though the visuals do not feature the Gulmohar, the tree is immediately conjured in the lyrics: “The red buds of the Gulmohar have blossomed, my love/ With red on its cheeks, the pink season has come/ Leaving me this gift, childhood has gone away.”  
 
-`youtube vid=YGZ9rz1MNbE start=74 aspect=1.6`
+{% include embed/youtube.html id="YGZ9rz1MNbE" aspect="1.6" class="right" %}
 
 Though the Gulmohar is linked with the beginning of desire and the end of childhood in _Narad Leela_, it is most often associated with nostalgia and childhood memories. In his 1965 poem _The Krishnachura Tree_, Syed Ali Hasan recalls the sensations of his childhood in a staccato of end-stopped lines, “Green night in the leaves of trees./ The blue of inexhaustible rest in rivers./ Many trees supported by shining vines.” The poem ends ponderously recalling the eponymous tree: “The history of my memory/ the krishnachura as seen/ by the eyes of youth.”[^48]  Notably, the Odia poet Pravasani Mahakud’s poem _Forget, forget_ begins with the Gulmohar tree: “Forget the sight of the first blossoming/ of the Gulmohar plant:/ may be some heart’s blood remains on it, may be/ some forehead’s pain and may be even some greenness/ of the whole body.”[^49] There is a magic, it seems, at first sight of the blossoming Gulmohar tree. The tree is always marred by the “heart’s blood” from the encounter in childhood. 
 
