--- a/_posts/2025-07-16-eggplant.md
+++ b/_posts/2025-07-16-eggplant.md
@@ -25,7 +25,7 @@ Originally designed by Japanese telecom companies, the [eggplant emoji](Q5526726
 
 For many North Americans, eggplant is almost as synonymous with a sex organ as it is with what’s for dinner. But generally, the fruit of this plant is known as a culinary vegetable, though it’s a berry since it contains edible seeds and develops from the ovary of a flower. Low in calories, but rich in nutrients including vitamins, minerals, protein, and fiber,[^ref3] eggplant has long been a dietary fixture throughout Asia and the Mediterranean, where cooks prize it for its versatility and ability to absorb flavors. World cuisine today abounds with dishes like eggplant parmesan _[(parmigiana di melanzane)](Q973455)_, South Asian puréed eggplant [(_baingan bharta_)](Q154872), Chinese Sichuan fish-fragrant eggplant (_yúxiāng qiézi_), Tanzanian eggplant curry (_mchuzi wa biringani_), and [Levantine](Q765174) classics like moussaka and baba ganoush. However, many Americans and Europeans find eggplant’s occasional bitterness and spongy texture challenging. This nightshade also bears the stigma of the [Solanaceae family](Q134172), known to harbor toxins, even though its New World counterparts—tomatoes, peppers, and potatoes—are mealtime standards.
 
-`iframe src=https://wikimap.toolforge.org/?cat=Eggplant-based_food&subcats=true&subcatdepth=1&cluster=true aspect=2.0 .large .center`
+{% include embed/iframe.html src="https://wikimap.toolforge.org/?cat=Eggplant-based_food&subcats=true&subcatdepth=1&cluster=true" aspect="2.0" class="right" %}
 
 From its domestication in Asia to its worldwide diffusion, eggplant raises the question of why some foods become naturalized while others remain perennially foreign. The story of this curious fruit recalls a comparison made by the anthropologist Mary Douglas: "Like sex, the taking of food has a social component, as well as a biological one."[^ref4] Eggplant and its crosscultural reception prove that our relationships to food surpass physical sustenance. "Cuisine is not so much a matter of ingredients," explains the sociologist Claude Fischler, "as of classifications and rules ordering the world and giving it meaning."[^ref5] And by transforming the raw into the cooked, Fischler adds, we use cuisine "to tame the wild, threatening forces that inhabit nature."[^ref6] More than a source of calories and nutrients, eggplant carries meaningful baggage, and in its various representations, it’s a kaleidoscopic signifier. Comestible, medicinal, poisonous, narcotic, aesthetic, erotic, this spiny Solanum is rendered according to the degree to which it has been "tamed" to be good to think as well as to eat.
 
@@ -74,7 +74,7 @@ Via trade routes connecting Italy and Iberia with the world beyond the Mediterra
 Islamic and Jewish communities played a large part in introducing other Europeans to Asian food cultures. An association with Islamic culture made Italians suspicious of the eggplant, and similarly, its Spanish and Italian ties, along with a general wariness of nightshades, made the plant seem suspect to gardeners on the British Isles. Culinary prejudice and aesthetic admiration predominate in herbals by English authors, who were more culturally removed from eggplant than their southern counterparts and thus highly doubtful of this exotic. In 1597, the botanist [John Gerard](Q1333338) wrote that in London he saw eggplant "the bigness of a goose egg," but recommended that the English should "content themselves with the meat and sauce of our own country," because "these apples have a mischievous quality, the use whereof is utterly to be forsaken."[^ref26] Much of Gerard’s advice was copied by [Philip Miller](Q312678) in his _Gardeners Dictionary_ of 1754, which contends that "these plants are only preserved as curiosities in the English gardens" and eaten only by "some Italians or Spaniards."[^2ref7]
 
 <!-- Timeline JS spreadsheet data not available
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1zcOYBQF5jzSgZn93F-0MYoCtBRSdizmMiNTH9r_kGy0&timenav-position=bottom&hash-bookmark=false&initial-zoom=2&height=500`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1zcOYBQF5jzSgZn93F-0MYoCtBRSdizmMiNTH9r_kGy0&timenav-position=bottom&hash-bookmark=false&initial-zoom=2&height=500" class="right" %}
 -->
 
 While herbalists in England and Germany warned their readers away from eggplant, the _[Hortus Malabaricus](Q5907004)_, compiled by Dutch colonists and published from 1678 to 1693, took a more open view. This record of the plants of "Malabar" (modern-day Kerala) derived its information from locals, and much of its contents are attributed to the distinguished Indian herbalist [Itty Achudan](Q6095079).[^ref28] The _Hortus Malabaricus_ lists the Braman name for eggplant, "vaenna," noting its use for curing toothaches and treating cows with internal abscesses. The Dutch overseer of this project, [Hendrik van Rheede](Q741104), laments that "the fruit of the nightshade in our homeland is a narcotic power: but India produces edible nightshades!"[^ref29] In such cross-cultural encounters, Europeans demonstrated a willingness to incorporate local plants into their herbal understanding while dreaming of potential profit and botanical innovation.
@@ -96,12 +96,12 @@ Many Renaissance murals juxtapose plants and animals with figures of classical m
 
 While Iberians probably introduced _S. melongena_ to the Americas in the early years of conquest and colonization, enslaved Africans conveyed their own cultivars, including the scarlet-colored guinea squash ([_S. aethiopicum_ L.](https://worldcrops.org/crops/garden-egg)) and the crunchy Gboma eggplant [(_S. macrocarpon_ L.)](Q7479565), as the Dutch physician and naturalist [Willem Piso](Q1385325) chronicled in his 1648 compendium of Brazilian flora, the [_Historia naturalis Brasiliae_](https://pt.wikipedia.org/wiki/Historia_Naturalis_Brasiliae). Enslaved laborers crossed the Atlantic bearing not only the clothes on their backs, but also their food staples, including African eggplant, sesame, okra, [watermelon](https://lab.plant-humanities.org/watermelon/), millet, sorghum, and [black-eyed peas](https://lab.plant-humanities.org/black_eyed_peas/), and the knowledge and skills to grow them. To gain some measure of security, autonomy, and "acknowledgment that not all of one’s labor was owned by the master," some enslaved workers cultivated "food fields" that allowed restricted access to land.[^ref38] However, after the colonial period, the guinea squash and gboma were among the African indigenous vegetables of tropical America to be lost or much less frequently consumed.[^ref39]
 
-{% include embed/image.html src="https://www.biodiversitylibrary.org/pageIMAGE/289117" caption="Willem Piso, Historia naturalis Brasiliae (1648)" attribution="Peter H. Raven Library, Missouri Botanical Garden" description="Belingela or guinea squash" license="Public domain" region="722,1960,2954,2718" aspect="0.67" class="right" %}
+{% include embed/image.html manifest="https://www.biodiversitylibrary.org/pageIMAGE/289117" caption="Willem Piso, Historia naturalis Brasiliae (1648)" attribution="Peter H. Raven Library, Missouri Botanical Garden" description="Belingela or guinea squash" license="Public domain" region="722,1960,2954,2718" aspect="0.67" class="right" %}
 
 While Southerners in the United States incorporated "foods that spread from the black hearthside to general consumption," Northerners were slower to accept eggplant.[^ref40] A pamphlet published in 1891 states that "some of the neglect of the egg plant is due to the fact that cooks are not familiar with it" and suggests the tried and true "fried," "baked," and "fritters."[^ref41] The regular appearance of eggplant in growing guides and seed catalogs in the late 1800s and early 1900s seems to indicate that more North Americans were adding it to their diets. In the competitive spirit of modern agriculture, Adolph Kruhm’s 1918 _Home vegetable gardening from A to Z_ showcases the girth of the Black Beauty variety with a measuring tape. However, since seed catalogs are as an exhaustive account of horticultural creation as one of Arcimboldo’s allegorical portraits, the marketing of a cornucopia of eggplant varieties might not indicate an actual major uptick in consumption. But for growers looking for crops that can withstand the hottest months in the upper end of the [USDA’s plant hardiness zones](https://planthardiness.ars.usda.gov/), Kruhm’s growing tip for eggplant still stands: "Cool nights do not agree with this child of the tropics."[^ref42]
 
-{% include embed/image.html src="https://www.biodiversitylibrary.org/pageImage/50118220" caption="Adolph Kruhm, Home vegetable gardening from A to Z (1918)" attribution="University of California Libraries" description="Black beauty Egg plant, the finest sort for home use" license="Public domain" aspect="0.6" class="right" %}
-{% include embed/image.html src="seedbox_oaksprings.jpg caption=Shaker’s" attribution="Oak Spring Garden Foundation" description="Shaker’s genuine vegetable and flowers seeds from Mount Lebanon, Columbia County" license="Public domain" aspect="1" class="right" %}
+{% include embed/image.html manifest="https://www.biodiversitylibrary.org/pageImage/50118220" caption="Adolph Kruhm, Home vegetable gardening from A to Z (1918)" attribution="University of California Libraries" description="Black beauty Egg plant, the finest sort for home use" license="Public domain" aspect="0.6" class="right" %}
+{% include embed/image.html manifest="seedbox_oaksprings.jpg caption=Shaker’s" attribution="Oak Spring Garden Foundation" description="Shaker’s genuine vegetable and flowers seeds from Mount Lebanon, Columbia County" license="Public domain" aspect="1" class="right" %}
 
 Dozens of eggplant varieties and cultivars are grown today,[^ref43] as this genus hybridizes easily, with or without human help.[^ref44] Horticulturists, gardeners, and cooks get excited when discussing the various cultivars. The creamy flesh of the Japanese Pickling, for example, is described as tasting mellow and sweet. Cultivar names also reveal the fertile imagination of their growers: the Fairy Tale which has violet skin with white stripes, the prolific Little Fingers which grows in clusters of 20 fruits or more, the Black Beauty which recalls Anna Sewell’s famous horse, and the hybrid Ichiban meaning "best" in Japanese. The ornamental attributes of eggplants like the white and purple Italian Rosa Bianca or the tiny watermelon-like Thai eggplant are admired almost as much as for their flavor. And while the ubiquitous eggplant emoji is solid purple, the fruits can be white, red, yellow, green, reddish-purple, light purple, dark purple, black, striped, or marbled.
 
