--- a/_posts/2025-07-16-poppy.md
+++ b/_posts/2025-07-16-poppy.md
@@ -47,7 +47,7 @@ Greek culture heavily influenced Roman life, especially during [the classical an
 
 The spread of the poppy itself needed careful monitoring via human intervention in order to naturalize and exist in differing environments, specifically outside of the Mediterranean temperate zones.[^ref8] It would only be in the 16th century that opium poppies could be found in books about “hardy flowers” or existing in “wild gardens.” In [*The Wild Garden; Or, Our Groves & Shrubberies Made Beautiful by the Naturalization of Hardy Exotic Plants*](https://books.google.com/books?id=1IdaAAAAYAAJ&newbks=0&dq=wild%20gardens%20%20william%20robinson&pg=PA51&output=embed) (1870), author and practicing gardener [William Robinson](Q4992239) described *Papaver somniferum* as able to “grow[ing] in any soil.”[^ref9]
 
-<!--`iframe src=https://books.google.com/books?id=1IdaAAAAYAAJ&newbks=0&dq=wild%20gardens%20%20william%20robinson&pg=PA51&output=embed` -->
+<!--{% include embed/iframe.html src="https://books.google.com/books?id=1IdaAAAAYAAJ&newbks=0&dq=wild%20gardens%20%20william%20robinson&pg=PA51&output=embed" class="right" %} -->
 
 {% include embed/image.html src="1IdaAAAAYAAJ_PA551.png" caption="The Wild Garden; Or, Our Groves & Shrubberies Made Beautiful by the ..." source="https://books.google.com/books?id=1IdaAAAAYAAJ&newbks=0&dq=wild%20gardens%20%20william%20robinson&pg=PA51&output=embed" class="right" %}
 
@@ -55,7 +55,7 @@ The spread of the poppy itself needed careful monitoring via human intervention 
 
 The use of opium in Europe halted during the Holy Inquisition. Despite that, the opium poppy was transported across Eurasia by traders, merchants, physicians, and travelers. India, the Middle East, and China participated its naturalization; the Silk Road was especially conducive to the poppy’s naturalization, as people held onto poppies for medicine and trade. In 1061, the Chinese scholar [Su Song](Q1265657) writes that, “[Poppies] are hard to cultivate. They must be planted during the ninth month, in a piece of land which was manured the year before. If not cultivated in this way, it will never germinate.”[^ref10] Arab traders traveled through the Silk Road, speading opium poppies across Asia. Opium poppies were integrated into diet and medicine in Southern China and its countryside, where Buddhist monasteries concocted recipes for remedies for ailments related to the throat and stomach.[^ref11] During [Tang Dynasty China](Q9683) (618–907), the Silk Road reached its zenith and because of its easy-entry and the development of other trading routes, recreational opium smoking rapidly spread.
 
-{% include embed/image.html src="wc-V0043635ER" description="From Wellcome collection: 'Unripe seed capsules of the opium poppy yield opium. Oil from the seeds is used in artist's paints, salad oil and soap.' Illustration found in book on vegetables and their uses." label="An Opium Poppy: Seed Capsule, Watercolor" license="public domain" class="right" %}
+{% include embed/image.html manifest="wc-V0043635ER" description="From Wellcome collection: 'Unripe seed capsules of the opium poppy yield opium. Oil from the seeds is used in artist's paints, salad oil and soap.' Illustration found in book on vegetables and their uses." label="An Opium Poppy: Seed Capsule, Watercolor" license="public domain" class="right" %}
 
 Century after century, social perceptions of the opium poppy have changed drastically, despite being useful as a medicinal drug throughout history. Meanwhile, both Asia and the Middle East took part in opium trading when Europe banned the use of Eastern products during the Holy Inquisition. In the sixteenth century, [Paracelsus](Q83428), a physician and scholar, repopularized the opium poppy as the drug “[laudanum](Q898739)”, a tincture of opium with wine or water. It was then that European societies returned to using the opium poppy for medicine. In China, opium use became popular across classes, beginning in royal courts and rural regions and spreading to the working class. In the late eighteenth century, opium became a major part of China’s sex industry. European nations considered Dutch sailors who smoked opium at the time,  “primitive people” for partaking.[^ref12]  By the nineteenth century, certain types of opium were prized commodities once again. Author and naturalist George Birdwood writes of Indian opium as “the luxury of the rich in China, as champagne is in Europe and America."[^ref13] Asian and Middle Eastern use of the morphine content in opium via smoking distinguished opium use from western use of opium through pills and tinctures. 
 
@@ -70,7 +70,7 @@ While prehistoric and ancient depictions of opium poppies mostly referred to see
 
 [Angelo Sala](Q453933), Italian doctor, chemist, and promoter of chemical remedies, discusses the medicinal properties of opium and evaluates existing knowledge about its effects in his 1618 *Opiologia; or a Treatise concerning ... Opium*, primarily its ability to "wonderfully and speedily release the body from intolerable pains". The first chapter is preceded by an image entitled ‘the method of extracting the juice of the poppy’, shown here, depicting a Turkish opium picker using his knife to scratch the poppy seed capsule in order to collect the sap. A similar image, shown behind Sala’s image here, appears on the title page of Georg Wolfgang Wedel's *Opiologia* (1682).
 
-`image-compare before=Sala_image.jpg after=Wedel_image1.jpg`
+{% include embed/image-compare.html before="Sala_image.jpg" after="Wedel_image1.jpg" class="right" %}
 
 Moving into the eighteenth century, Swedish naturalist Carl Linnaeus named the opium poppy *Papaver somniferum* in his [*Species Plantarum*](https://archive.org/details/speciesplantarum00clin_857/page/508/mode/2up?q=papaver) (1753), the genus coming from the noun for poppy in Greek and the species name acknowledging its sleep and dream-inducing properties in the etymological link to the latin *somnium,* meaning "dream" or "vision." This name differentiates the opium poppy from other varieties of annual flowering plants in the family *Papaveraceae*.
 
@@ -84,7 +84,7 @@ The nineteenth century saw a conflict between these concepts of the opium poppy:
 
 As the opium poppy developed into a household drug, its role within the political conflicts of empire, trade, and regulation in the nineteenth century was epitomized in The Opium Wars (1839-1842 and 1856-1860). The opium poppy was connected to another primary economic plant of the period, [tea](Q6097), and the trade imbalance between Britain and China, with China accepting only silver in exchange for tea. The British response was to illegally smuggle Indian opium into China for payment in silver. [^ref15] Fraught discussions of the ‘Opium Question’ centered on the morality of the trade, considering the addictive properties of the drug, as well as Britain's financial dependence on opium. An 1882 edition of the [*Journal of the Society of Arts*](https://archive.org/details/journalofsociety30soci_0/page/200/mode/2up) records a discussion of this among members of the society including former Home Secretary Henry Bruce and doctor Sir John Rutherford Alcock, who lived in China for twenty years: "[T]here was a very painful impression on the minds of some persons as to the morality of this trade [...] many believed that this country [Britain] was not only importing on a large scale a pernicious drug into the most populous country of the world, but also compelling its introduction and use by force of arms."
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=15lvYjMlhf6M1xYvad7yTbj54DhRo3Flhi_1GlGm6Fhg&timenav-position=bottom&hash-bookmark=false&initial-zoom=1&height=650 height=650`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=15lvYjMlhf6M1xYvad7yTbj54DhRo3Flhi_1GlGm6Fhg&timenav-position=bottom&hash-bookmark=false&initial-zoom=1&height=650" class="right" %}
 
 This question of morality was heightened by the drug trade being fueled in British India. The [East India Company](Q83164) sought to monopolize opium production in India from the 1770s onwards and by the nineteenth century managed opium poppy plantations across the country.[^ref16]  However, they sold off the product to private merchants to transport to China, increasingly disconnecting the opium poppy plant from the drug product it provided.[^ref17] 
 
@@ -153,11 +153,11 @@ In his Papaver somniferum series, artist Juan Fernando Herrán presents a Trípt
 
 The displacement of peasants and Indigenous people was accentuated in the 2000s during the war against the "cursed flower." Entire populations had to flee due to police persecution and the structures of the drug industry. According to the UN Refugee Agency, Colombia is a country with more internal displacement at a global level that disproportionately affects ethnic minorities. For some scholars, displacement should be understood as a weapon of war, not an effect of war, a capitalist strategy of accumulation in which both the state and the insurgent groups empty land as a reason to expropriate, to appropriate both the territories and their resources. The reality is that in these politics of domination, the whole landscape was being transformed. Not only was violence being wrought on the human, but also on the plant and the other organisms that coexisted with the opium poppy. The aerial spraying reached every corner of the surface. Colombia’s Edenic scenes of an almost virginal landscape of the mountains began to change into a codified space where the machine with its noise and poison became an integral part of that new colonizing gaze.[^ref27]
 
-`iframe src=https://conflicturbanismcolombia.com/applications/map.html#6/5.627/-72.488 aspect=1`
+{% include embed/iframe.html src="https://conflicturbanismcolombia.com/applications/map.html#6/5.627/-72.488" aspect="1" class="right" %}
 
 Carlos Uribe's (Medellín, Colombia, 1964) painting, Horizonte con glifosato (1999), makes direct reference to these political and environmental issues that informed a broad public and private debate about the increasingly notorious presence of drug money in Colombian society. The work is a purposeful appropriation of the 1913 painting by Antonio Cano (1865-1935), considered emblematic for regional visuality in Colombia. Cano’s painting shows a peasant family extending their hands in an act of promise in front of the immensity of a territory that shows historical references to a long tradition of occupation in a history of colonization in the Antioquian region. Cano’s work contains allusion to religion, patriarchy, and colonization of the territory. The painting has been described by scholars as the best example of a regional identity in Colombia because it shows elements of a region that has become one of the richest and more prosperous in the history of modern Colombia whose values are rooted in a particular conception of family, religion and industry. On the other hand, in Uribe’s work, in addition to making an artistic appropriation, he also makes a historical reference to a political and environmental situation that was happening once the airplanes spilled [glyphosate](Q407232) not only on poppy plantations but also in rural communities.
 
-`image-compare before=wc:Horizonte%2C_Francisco_Antonio_Cano%2C_1913.jpg after=wc:Horizontes_%28Horizonts%29_by_Carlos_Uribe_%281997%29_%285083038746%29.jpg`
+{% include embed/image-compare.html before="wc:Horizonte%2C_Francisco_Antonio_Cano%2C_1913.jpg" after="wc:Horizontes_%28Horizonts%29_by_Carlos_Uribe_%281997%29_%285083038746%29.jpg" class="right" %}
 
 Curiously, the pilots had to direct their gazes to the beauty of the opium poppy flower. Wherever they saw red, they had to spray. The plant becomes a sign of its own precariousness and a threat to the vegetation that covers or hides it. Different reports from both the state and environmental organizations warned of the consequences of aerial spraying for both humans and the environment. Artist Maria Elvira Escallon (1954) displays the encounter between landscape and herbicide. For twenty-six days she took pictures to show the slow and damaging effect of the glyphosate. Her artwork reveals how the opium poppy is entwined with the small and the large. Uribe's and Escallón's artwork question the poppy relationship to an idea of life and of death, with the intimate, the public, and the private. The opium poppy becomes an allegory and accumulation of that which is criminal and immoral. Even today we cannot consider the history of Colombia without understanding the agency of the opium poppy, and its relationship with the environment, the animals, and the human.
 
