--- a/_posts/2025-07-16-tamarack.md
+++ b/_posts/2025-07-16-tamarack.md
@@ -44,11 +44,11 @@ These become places we can begin to understand more fully through [Traditional E
 
 The Tamarack tree species belongs to the genus *Larix* in western botanical nomenclature and is known by many names across different regions. In North America, the common name Tamarack refers to the [American Larch](Q734085) (*Larix laricina*), also known as the Eastern Larch and Hackmatack. The other ten widely accepted species in the same genus are generally referred to as Larch trees. This narrative focuses on the characteristics of the Tamarack, while also introducing other Larch species to compare their significances within indigenous cultures across different regions globally. 
 
-`youtube vid=L3ApTi-6iNM aspect=1.6`
+{% include embed/youtube.html id="L3ApTi-6iNM" aspect="1.6" class="right" %}
 
 Among the Ojibwe Nation in the Great Lakes Region, the Tamarack is called *mshkiigwaatig* in the Ojibwa language, among other names.[^3] Some of these names specifically relate to Indigenous philosophies about the interconnectedness of humans and plants, such as the Siberian Indigenous dialect name *Tuuru* for the Siberian Larch (*Larix sibirica*), while others such as “tamarack” are adopted from misinterpretations of indigenous words in English from colonial times, and as a result carry little to no holistic meaning in English.[^4] The Ojibwe word is similar to the word that Potawatomi people use to refer to all plants, *mshkikinek*, or “the growers of the world.”[^5] According to 2022 MacArthur Fellow, ecologist, ethnobotanist, and Indigenous scholar [Robin Wall Kimmerer](Q7352852), *mshkikinek* directly translates as “medicines,” with the root *mshkiki* meaning “strength of the earth.”[^6]
 
-`youtube vid=M0-Es_VVohs aspect=1.6`
+{% include embed/youtube.html id="M0-Es_VVohs" aspect="1.6" class="right" %}
 
 Humanity’s fascination with trees has been expressed in many ways across time, from cosmology to botany to landscape design. Trees are often treated as both living organisms and botanical specimens through Indigenous rituals, traditional ecological knowledge, and Western scientific taxonomies.[^7] The legend of the Tamarack and the Chickadee illustrates how Indigenous storytelling can connect people to place through plant species. Tamarack trees and other *Larix* species are featured in many histories, inspiring us to think of how a palimpsest of narratives can inform the future of landscape and plant knowledge, and what role Indigenous knowledge can play in understanding living systems. 
 
@@ -68,7 +68,7 @@ Each tamarack species prefers distinct growing conditions. In the Pacific Northw
 
 Larches grow old, but not alone. Like most forest trees, the Larch is part of a network of living systems. Even though most live for about 200 years, and the European Larch has been reported to live as long as 2,000 years, almost all grow among other tree species. They often grow in pure stands and occasionally as an understory tree to other conifers. Insects and small mammals consume the tree’s bark and needles. Often, ospreys will choose to nest in its crown. 
 
-`image-compare before=Larches_in_Winter.jpeg after=wc:Larix_decidua_Modrzew_europejski_2023-06-25_01.jpg caption="Swipe across images to view the conditions of the European Larch, *Larix decidua*, in winter and in summer."`
+{% include embed/image-compare.html before="Larches_in_Winter.jpeg" after="wc:Larix_decidua_Modrzew_europejski_2023-06-25_01.jpg" caption="Swipe across images to view the conditions of the European Larch, *Larix decidua*, in winter and in summer." class="right" %}
 
 Among the three North American species, [ectomycorrhizal fungi](https://www.youtube.com/watch?v=SrKMhSNWPAw&t=3s) are often found burrowing in their tree roots; these microorganisms are essential for 90 percent of all temperate and boreal forest trees for nutrient cycling, plant health, decomposition, and carbon sequestration.[^11]
 
@@ -82,7 +82,7 @@ One need not look far into New England’s temperate forests in the fall before 
 
 Early European travelers’ accounts sometimes referred to the medicinal properties of the Tamarack in North America before Linnean classification became the standard in the eighteenth century. John Josselyn, an English traveler and physician, recorded medicinal uses of the tree while recording species of plants in America. “The Turpentine that issueth from the Cones of the Larch-tree ... is singularly good to heal wounds, and to draw out the malice of any Ach,” recalls Josselyn in his travel record, *An Account of two Voyages to New England*, in 1674.[^13] “Groundsels made of Larch-tree will never rot … Oh, that my Countreymen might obtain that blessing with their buildings,” he writes of the benefits of using the tree for timber.[^14] Josselyn’s account also preserves some Indigenous knowledge of North American trees recorded at the time by white settlers.
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1zRzuoBAx7zFxTPSvJ64o5bPtbkrZrq9OB7e1HYisy6Y&timenav-position=bottom&hash-bookmark=false&height=500 height=500`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1zRzuoBAx7zFxTPSvJ64o5bPtbkrZrq9OB7e1HYisy6Y&timenav-position=bottom&hash-bookmark=false&height=500" class="right" %}
 
 Several Western botanists who traveled the globe attempted to document and classify all species of Larch trees, including the Tamarack. North America was of particular interest, and between 1768 and 1900, several scientists published taxonomies of the trees native to the continent. Such publications, however, seldom included information about traditional ecological knowledge or Indigenous knowledge about plants.[^15]
 
@@ -139,7 +139,7 @@ If we consider the Tamarack as a wetland stabilizer that aids in [phytoremediati
 
 Traditional knowledge practices teach us more about plants than just their medicinal and other practical uses. They teach us about our **relationship with larger ecological systems**. They relate us to place. Through oral traditions like the Ojibwe legend about the tamarack, we begin to understand the spiritual meaning of the species, and the place that it occupies in the worldview of Indigenous communities. Through a single species, we begin to understand the symbiotic patterns of the relationship between humans and plants. This deeper understanding can also shift our perspective on the meaning and purpose of designed spaces. 
 
-`youtube vid=eH5zJxQETl4 aspect=1.6`
+{% include embed/youtube.html id="eH5zJxQETl4" aspect="1.6" class="right" %}
 
 Design can represent the relationships between plants and by grouping certain species or making connections by storytelling through plants. The key to using plants as the catalyst in the design process is that it must acknowledge the role of the people whose stories are being told. The design may be the agent, but the people are the protagonists. If one were to tell the story of the Tamarack through design, it should be built around the living stories, past and present, about this tree. 
 
