--- a/_posts/2025-07-16-tamarind.md
+++ b/_posts/2025-07-16-tamarind.md
@@ -21,7 +21,7 @@ image:
 
 The grand and imposing hard-wood tree _[Tamarindus indica](Q80235)_, commonly known as the tamarind tree, has long been a contradictory plant: it is at once a place of refuge and site of danger, a medicinal purgative and a culinary shape-shifter, an ingredient in a thirst-quencher and a drought-tolerant species. And while the tree has been documented across historical and literary genres for millennia, its place of origin remains scientifically obscure. Genetic studies do suggest an African origin, though wood charcoal analysis confirms that the tree has inhabited India since at least 1300 BCE, leading some to argue it is indigenous to the region.[^ref1] The tamarind narrative is rooted in so many singular places, but its global circulation speaks to the plant’s long history and steadfast ability to grow in dry and hot climates. 
 
-`image-compare before=wc:Nallur_tamarind1.jpg after=wc:AMH-7001-KB_Church_service_beneath_a_tamarind_tree.jpg`
+{% include embed/image-compare.html before="wc:Nallur_tamarind1.jpg" after="wc:AMH-7001-KB_Church_service_beneath_a_tamarind_tree.jpg" class="right" %}
 
 Such contradictions have been explored through storytelling: the tree serves as creative inspiration, thematic motif, and simple theatrical site across myth, legend, and fiction.[^ref2] The tamarind got its small leaves, according to a [Bihar](Q1165) tribal story, when the exiled [Lord Rama](Q160213), [Lakshmana](Q917687), and [Sita](Q191114) came upon a tamarind grove, where the tree’s large leaves provided shelter. But Rama was convinced that they were meant to suffer during their exile and so he ordered Lakshmana to shoot at the leaves with his bow and arrow—the leaves have been split ever since.[^ref3]
 
@@ -124,7 +124,7 @@ Virtually every part of the tamarind tree—seeds, fruity pulp, bark, root, and 
 
 Tamarind is mentioned in traditional Sanskrit literature and traditional African medical texts like the [_Kitab al-qawl al-sinna_.](http://www.cci.uct.ac.za/usr/cci/publications/aria/download_issues/2012/Mukhtar%20Bunza.pdf) It also appears in the _[Susruta-Samhita](Q1995239)_, an Ayurvedic medicine text. With such a diverse array of uses—and its hearty ability to withstand hot, dry climates—the plant captured the imagination of colonists on the hunt for profitable crops. The well-known synonym _T. occidentalis_, for example, was included in physician and horticulturalist [Henry Perrine’s](Q4268924) 1838 report to the U.S. Congress House Committee on Agriculture, in which he includes _T. occidentalis_ as a notable crop of value.
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1N898HvO8a50-MMGVxGCR-MGbd6ftuk7b&timenav-position=bottom&hash-bookmark=false&initial-zoom=1&height=650 height=650`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1N898HvO8a50-MMGVxGCR-MGbd6ftuk7b&timenav-position=bottom&hash-bookmark=false&initial-zoom=1&height=650" class="right" %}
 
 Tamarind’s resilience has made it a central part of herbal medicine practices across history. The seventeenth-century oil painting created after a design by the French printmaker [Nicolas de Larmessin II](Q16666497) portrays three men as the personifications of medicine, pharmacy, and surgery. At the center of the composition, the physician personifying medicine is cloaked in garb that bears the names of medieval authors central to traditional Western medicine, including [Avicenna](Q8011) and [Mesue](Q1291511), two Persian polymaths credited by Tournefort as key to the spread of knowledge about tamarind. Taking a closer look, just beneath the medicine man’s hand, is a [written prescription](img2/zoomto/366,572,344,300) to treat medical ailments, and nestled within the text that includes "[cassia](Q162882)" and "[rhubarb](Q7535)" is none other than "tamarind."
 
@@ -164,7 +164,7 @@ Tamarind pulp makes up roughly 30 to 50 percent of a ripe fruit.[^ref24] The pod
 
 Tamarind water is an immensely popular drink, both soothing and cooling, and is offered in restaurants and sold in markets, in the hot climates of Central America, Southeast Asia, and Africa. In north India, tamarind water infused with cumin, pepper, and other spices is a popular summer beverage known as [jal jeera](Q6125787). Made by adding tamarind pulp to water and sweetened, tamarind water is easy to make at home—a quick YouTube search reveals dozens of how-to videos for making it.  
 
-`youtube vid=pXtKAmhKdpI aspect=1.6`
+{% include embed/youtube.html id="pXtKAmhKdpI" aspect="1.6" class="right" %}
 
 Tamarind water has been around since at least the late medieval period as an enjoyable beverage and a medicinal drink. [Marco Polo,](Q6101) in his travel accounts, observes merchants being "force[d]...to swallow a stuff called _Tamarindi_, mixed in sea-water" that results in "violent purging."[^ref27] A few centuries later, [John Parkinson,](Q256288) apothecary to [James I](Q79972) and Royal Botanist to [Charles I](Q81506), writes of tamarind in his [_Theatrum botanicum_](https://www.biodiversitylibrary.org/page/56600139) (1640): "it doth exceedingly helpe to assuage the thirst, if an ounce there-of be dissolved in faire water, and a little Sugar mixed therewith." Parkinson notes that the drink is a particularly suitable thirst-quencher for "people of the hot countries."
 
