--- a/_posts/2025-08-28-jasmine.md
+++ b/_posts/2025-08-28-jasmine.md
@@ -121,7 +121,7 @@ The prominence of jasmine as the "flower of love" is beautifully represented in 
 
 According to the Food and Agriculture Organization of the United Nations, jasmine flowers were introduced in [Fuzhou](Q68481), China's most important city for tea production, as early as the [Western Han Dynasty](Q1072949) (206 BCE–9 CE). Jasmine has likely been cultivated in this region to scent tea since the fifth century, though its popularity did not become widespread until the [Qing Dynasty](Q8733) (1644–1912), when tea became one of China’s major export commodities.[^44] Jasmine tea is normally produced using a combination of jasmine flower petals and green tea leaves. The jasmine flowers are grown at high altitudes and picked in the early morning on hot summer days before they have fully blossomed to preserve their fragrance.
 
-`youtube vid=mTkEDS707A4 .medium aspect=1.6`
+{% include embed/youtube.html id="mTkEDS707A4" aspect="1.6" class="right" %}
 
 Jasmine also holds spiritual significance in Chinese culture. During the [Chinese New Year](Q131772), or Spring Festival, flowers are often sold to decorate homes, as they are symbols of prosperity and long life.[^45] As long ago as the eighteenth century, jasmine, peonies, and fruit blossoms were sold for the New Year, having been grown in hothouses.[^46] Jasmine is also a Chinese symbol of eternal love, continuing the cross-cultural theme of jasmine as a flower of passion and sensuality.[^47]
 
@@ -151,7 +151,7 @@ In [Lorenzo Lott](Q310973)'s *Sacra Conversazione* (Sacred Conversation), an ang
 
 In the late sixteenth century, [Henry Lyte](Q5725237) published *A niewe herball or historie of plantes, a treatise on the cultivation and practical use of plants in England*.[^56] He records that "Jasmine groweth in manner of a hedge or quickset, and must be led alongst and carried as the rose or vine...The flowers be white and long of a sweet and pleasant savour."[^57] Lyte also reports that "Jasmine groweth in some countries of his owne kinde, as in Spaine, and some places of England, in this countrie it is planted in gardens...Jasmine flowreth in July and August, but the fruit in this countrie commeth not to perfection." Of jasmine's "vertues," the plant was recommended as a cure for red spots, cold swellings, or hard lumps "when it is applied and laid thereto." Lythe also notes the use of oil of jasmine as an herbal remedy: "Jasmine drieth reumes or stilling downe of humours from the head, and the moistness of the braine, and profiteth much against the cold infirmities of the same." As in the *Tractatus de Herbis*, jasmine has often been prescribed both as a soothing and drying agent counteracting the forces of the wetter and colder afflictions particularly associated with phlegm in humoral medicine.
 
-`iframe src=https://archive.org/embed/b30417806_0003/page/n240 caption=Joseph Pitton de Tournefort, *Institutiones rei herbariae*, tome III (Paris : E Typographia Regia, 1719), *Internet Archive* via Wellcome Library. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/b30417806_0003/page/n240" caption="Joseph" aspect=".7" class="right" %}
 
 Beyond its medicinal uses, European gardeners primarily cultivated jasmine to create a pleasing, often enveloping sensory atmosphere. Since jasmine is a climbing plant, it was used to cover walls and trellises, as well as arbors and bowers, with a blanket of sweet floral fragrance. It could also be potted and kept indoors.[^58] In her study of early modern perfume, Holly Dugan argues that the scent of jasmine was a sensory indicator of private, enclosed space—both indoors and outdoors—and thus also a symbol of pleasure. In forming the vegetal walls and canopies of garden spaces and perfuming interior rooms via planter pots and potpourri bowls, jasmine became an olfactory signal of comfort, intimacy, and pleasure. While jasmine had long signified purity and spiritual love, its sensory engagement and association with women’s domains made it "a key trope for defining eroticized space."[^59]
 
@@ -170,11 +170,11 @@ A century later, in 1754, the official mistress of [King Louis XV](Q7738) of Fra
 
 In 1839, an American edition of Louisa Johnson’s *Every Lady Her Own Gardener* was published. Johnson wrote the book for the express purpose of guiding women in managing and cultivating gardens which were both functional and aesthetic. In the entry on jasmine, Johnson remarks that the plant’s "wild luxuriant appearance" perhaps constitutes "its chief grace."[^60] "The jasmine is a beautiful screen in summer," she writes, "wreathing its festoons through trellis-work; and it appears to me that nature presents not, in our colder climes, a more fragrant and beautiful bouquet than a mixture of roses and jasmines." These flowers were often referenced together in allusion to their scent. Indeed, as the seventeenth-century English poet [Abraham Cowley](Q329896) penned, "Who that has reason and his smell / Would not among roses and jasmine dwell?"[^61]
 
-`iframe src=https://archive.org/embed/CAT10891914/page/n26 caption=Double Arabian Jasmine, Plate 8 from *The Compleat Florist* (London, Printed for J. Duke, and sold by J. Robinson at Ye Golden Lyon Ludgate Street, 1747), *Internet Archive*. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/CAT10891914/page/n26" caption="Double" aspect=".7" class="right" %}
 
 As a cultivator, Johnson uses the same language as poets to describe jasmine. To her readers she discloses, "I have seen very fanciful and beautiful devices invented to display the beauty of the jasmine. Their shoots grow so rapidly and luxuriantly, that if the plant is allowed to luxuriate, it will soon cover any frame-work with its drooping beauty."[^62] Among the selection of poems celebrating jasmine gathered in the 1884 *Language and Poetry of Flowers*, compiled by Mrs. C. M. Kirtland, poets from [William Cowper](Q315537) (1731–1800) and [Jane Taylor](Q4259798) (1783–1824) to Thomas Moore (1779–1852) portray jasmine as languorous and intoxicating.[^63]
 
-`iframe src=https://archive.org/embed/languagepoetryf00kirt/page/119 caption=Mrs. C. M. Kirtland, *The Language and Poetry of Flowers* (Chicago: Belford, Clarke & Co, 1884), 119–124, *Internet Archive*. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/languagepoetryf00kirt/page/119" caption="Mrs." aspect=".7" class="right" %}
 
 In an issue of *Household Words*, Charles Dickens penned an ode to jasmine. He exclaims "Beautiful Jasmine!," proposes to "crown the Jasmine empress and queen of all [flowers]," and posits that it is "the Isis of flowers, with veiled face and covered feet."[^64] Dickens’s reverence of a chaste jasmine with her "veiled face and covered feet" may reflect a [Victorian](Q182688) anxiety over tensions arising from continued cultural glorification of chastity and societally enforced repression of sexuality.
 
@@ -182,17 +182,17 @@ In an issue of *Household Words*, Charles Dickens penned an ode to jasmine. He e
 
 Such sentiments are echoed in the many symbolic meanings attributed to various species of jasmine in flower dictionaries, which were hugely popular in the nineteenth century. The dictionaries repeatedly use the same language to describe jasmine's symbolic meanings, but they present a multiplicity of distinct connotations depending on the type of jasmine. For example, in *The Language of Flowers: An Alphabet of Floral Emblems*, different meanings are ascribed to Cape Jasmine ("transport of joy"), Carolina Jasmine ("separation"), Indian Jasmine ("I attach myself to you"), Spanish Jasmine ("sensuality"), White Jasmine ("amiability"), and Yellow Jasmine ("grace and elegance"). This poetic fragmentation suggests not only that jasmine’s many varieties were tasked with propping up the plant’s dual associations with the spiritual and sensual, but also perhaps that readers of the time were knowledgeable enough to be able to identify each of these varieties by sight.
 
-`iframe src=https://archive.org/embed/languageflowers00g/page/24 caption=*The Language of Flowers: An Alphabet of Floral Emblems* (London: T. Nelson and Sons, Paternoster Row, 1876), 24, *Internet Archive*. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/languageflowers00g/page/24" caption="*The" aspect=".7" class="right" %}
 
 # Current Cultivation of Jasmine for Perfume 
 
 Jasmine is one of the principal flowers cultivated in [Grasse](Q173705), a town at the foot of the Maritime Alps in the south of France, known globally as a center of perfume production. The flowers are harvested between July and October. *[Enfleurage](Q900621)*, the traditional means of harvesting essential oil, entails embedding the fresh flowers in animal fat, which soaks up the scented oils. The fat is then scraped away, and alcohol is used to extract the essential oil from the pomade.[^65] Today, volatile solvent extraction is a more commonly used process. Jasmine flowers are immersed in a chemical solvent that draws out the scented oil from the flowers' petals, allowing them to be drained. The flowers, now devoid of their scent, are often recycled and used as fertilizer.
 
-`iframe src=https://archive.org/embed/mobot31753002852470/page/497/ caption=Henry Charles Andrews, *The Botanist's Repository, for New and Rare Plants* (London: T. Bensley, 1797), *Internet Archive*. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/mobot31753002852470/page/497/" caption="Henry" aspect=".7" class="right" %}
 
 In his 1771 *Flora’s Toilette, or Essay on the Plants and Flowers that can serve to ornament Women, including different means of preparing Essences, Pomades, Rouges, Powders, Make-up, and Scented Waters*, French physician and naturalist [Pierre Buc'hoz](Q3383203) notes that a fragrant water of jasmine can only be produced through a multi-stage process of drawing the scent out of the petals with a combination of substances.[^66]
 
-`iframe src=https://archive.org/embed/BIUSante_pharma_res014450/page/n56 caption=Pierre-Joseph Buch’oz, *Toilette de Flore, ou Essai sur les plantes et les fleurs qui peuvent servir d'ornement aux dames* (Paris: Valade, 1771), 33-34, *Internet Archive*. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/BIUSante_pharma_res014450/page/n56" caption="Pierre-Joseph" aspect=".7" class="right" %}
 
 Jasmine essential oil, while often not the dominant ingredient, is today used as a key ingredient in major perfumes, including in [Chanel no. 5](Q820507). Jasmine’s omnipresence in wearable scents suggests that its fragrance continues to be a meaningful form of personal adornment, and yet, something so ubiquitous that one may fail to notice its sensual presence.
 
@@ -202,11 +202,11 @@ Jasmine essential oil, while often not the dominant ingredient, is today used as
 
 Jasmine became popular in Europe by the fifteenth century, likely introduced through networks of trade and colonialism.[^67] With the flowers, Western nations also imported and adopted many of the symbolic meanings that cultures of the Middle East, Central, South, and East Asia have shaped around jasmine over millennia. While part of the motivation for embracing this "language of flowers" emerged from admiration of and interest in Eastern cultures, many white Europeans and Americans stayed committed to their "deeply ingrained feeling[s] about the inferiority or primitiveness of these major cultures."[^68] It is therefore unsurprising that European and American authors sometimes used [orientalist](Q42865) references in their books on the language of flowers. For example, in [Lucy Hooper](Q20051082)’s 1842 *Lady’s Book of Flowers and Poetry*, she features the following excerpt from oriental poetry to help characterize white jasmine as a flower symbolizing "loveliness” and “amiability": "And brides, as delicate and fair / As the white jasmine flowers they wear."[^69]
 
-`iframe src=https://archive.org/embed/ladysbookflower00hoopa/page/n12/ caption=Frontispiece for Lucy Hooper’s *The Lady’s Book of Flowers and Poetry* (New York: J.C. Riker, 1842), *Internet Archive*. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/ladysbookflower00hoopa/page/n12/" caption="Frontispiece" aspect=".7" class="right" %}
 
 These lines are from Thomas Moore’s 1817 poem *[Lalla Rookh](Q4253416)*, an oriental romance about a Mughal princess. In the above passage, Moore likens Yemeni women to jasmine’s beauty. Although the orientalism in *Lalla Rookh* is somewhat nuanced, as Moore simultaneously "traffics in Orientalist stereotypes” and “emphasizes the elusiveness of cultural identity," the popular poem nevertheless reinforced nineteenth-century readers’ stereotypes of Eastern cultures.[^70] Since the *Lady’s Book of Flowers and Poetry* was published at the height of *Lalla Rookh*’s popularity, the former’s readers would have recognized the passage from Moore’s poem in Hooper’s entry on white jasmine. By highlighting jasmine’s presence in *Lalla Rookh*, Hooper subtly prompts her readers to situate jasmine in the atmosphere of exotic otherness curated by *Lalla Rookh*’s orientalism. Moore’s poem, and by extension Hooper’s book, also project this otherization onto women from Eastern cultures. Although the above-quoted comparison of Yemeni women to jasmine is superficially flattering, it subjects these women to the same otherization and exoticization of the "oriental" as jasmine.
 
-`iframe src=https://archive.org/embed/lallarookhorien00mooriala/page/n8 caption=Frontispiece for for Thomas Moore’s *Lalla Rookh, An Oriental Romance* (New York: T. Y. Crowell & Co., 1891), *Internet Archive*. aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/lallarookhorien00mooriala/page/n8" caption="Frontispiece" aspect=".7" class="right" %}
 
 # The Jasmine Revolution
 
