--- a/_posts/2025-08-28-mulberry.md
+++ b/_posts/2025-08-28-mulberry.md
@@ -55,11 +55,11 @@ The [white mulberry](distribution/flyto/37.91,104.14,3) is believed to be native
 
 The larvae of a species of moth called *Bombyx mori*, more commonly known as the silkworm, produce silk. Over centuries of domestication, the once-wild silk moth *Bombyx mandarina* was bred into the familiar *Bombyx mori*, maintaining its preference for white mulberry leaves, while the white mulberry was bred to contain fewer tannins and more protein to promote silkworm growth.[^10] For the blind, flightless larvae, the leaves of the white mulberry are one of the only foods they will eat and what they are most partial to. Their cocoons, made from the secretions from two glands, harden into a long delicate fiber rich in protein.[^11] Measuring between 600 and 900 meters in length, it is this filament that the worms produce that becomes the luxurious material known as silk.
 
-`youtube vid=77ktNSPFbwQ aspect=1.68 .medium`
+{% include embed/youtube.html id="77ktNSPFbwQ" aspect="1.68" class="right" %}
 
 During the usual production process, sericulturists steam the cocoons to kill the larvae. This prevents the precious thread from breaking when the adolescent moth emerges, although sometimes twisting the filaments from several cocoons together is required.[^12] A more humane production method uses the filzament left over after the moth has emerged from the cocoon, rejoining them with the filaments that have been broken through twisting. By sparing the silkworm, the silk this method produces becomes Ahimsa silk. The result in either case is a single strand of silk thread.[^13] This incredible substance traveled around the globe, and where silk went, so too did the silkworm *Bombyx mori* and the white mulberry.[^14]
 
-`image-compare before=wc:Shawl_(AM_2017.103.9-8).jpg after=wc:Handkerchief_(AM_1996.72.7-3).jpg caption="Swipe across images to compare regular silk (left) and Ahimsa/tussah silk (right)."`
+{% include embed/image-compare.html before="wc:Shawl_(AM_2017.103.9-8).jpg" after="wc:Handkerchief_(AM_1996.72.7-3).jpg" caption="Swipe across images to compare regular silk (left) and Ahimsa/tussah silk (right)." class="right" %}
 
 # Obsessed by Silk
 
@@ -114,19 +114,19 @@ According to another legend, the sixth century Byzantine Emperor Justinian I bri
 
 By the late 1400s, France—which had witnessed the prosperity silk had brought to Italy and Spain—established its own thriving silk industry with Lyon serving as the heart of French silk weaving, albeit with minimal in-country sericulture and thread production. It was due to Henri IV and his agronomist friend Olivier de Serres in the late 1500s that the first consequential planting of mulberries occurred. However, until the eighteenth century, the French silk industry remained reliant on Piedmontese silk threads—known as organzine—which were vastly superior to French alternatives in terms of uniformity, quality, and fabric production.[^37] At one point, in the mid 1500s, 30 percent of all silk imports to France were from Italy, which also accounted for 20 percent of imports to other European countries, at times even surpassing China.[^38] Because the exportation of silk fabric was such a significant portion of France’s economy, the French desired to produce their own organzine on par with the Italians.
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&width=100%25&height=650 height=650px .center`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&width=100%25&height=650" class="right" %}
 
 In the 1740s, Philibert Orry, the General Controller of Finances, ordered another increase in cultivation of mulberry trees and opened spinning manufacturers in an attempt to eventually match the quality of Piedmont organzine. As this endeavor proved largely unsuccessful, the physicist Jean-Antoine Nollet was sent to Italy as an "intelligence agent" to learn the secrets of Piedmont silk thread production. Through the information Nollet gathered, the French concluded that it was the superior production methods of the raw silk itself that produced quality organzine, which led to the invention of an automated spinning machine by Jacques Vaucanson, the inspector of silk manufacturing. Several decades later, Joseph Marie Jacquard drew inspiration from Vaucanson’s machine and invented the Jacquard loom, revolutionizing French textiles and the silk weaving industry along with it.
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=6&width=100%25&height=650 height=650px .center`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=6&width=100%25&height=650" class="right" %}
 
 England, meanwhile, had a late start into the silk industry. By the time the French had perfected their woven silk fabrics in the fifteenth century, King Henry VI had banned silk imports, and small-scale efforts to cultivate silkworms proved unsuccessful due to the climate.[^39] Beginning in 1607, King James I attempted to match France’s success, eager to cement England as a rival powerhouse in the silk industry. However, England’s poor climate foiled such plans, and the only aspect of France’s silken success he managed to replicate was the planting of mulberry trees.[^40] Despite this failure at establishing sericulture, James I was determined not to be outcompeted by France. To this end, he required English landowners to plant mulberries and suggested that they raise silkworms themselves. While unsuccessful in-country, this culminated in several sericulture projects in the North American colonies, further motivated by the need to reduce England’s tobacco dependency through diversified crops.[^41] The first attempt at raising silkworms was in Jamestown in 1607, where there were many native red mulberries, not a favorite of silkworms. But the endeavor failed because the silkworms’ caretaker became ill which resulted in rats "[overrunning] the silk establishment and [eating] the worms."[^42]
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=3&width=100%25&height=650 height=650px .center`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=3&width=100%25&height=650" class="right" %}
 
 In 1609, the colonists began revamping sericulture efforts with improved organization and presumably healthier caretakers, finding reasonable success despite their using the native red mulberries.[^43] Starting in 1620, manuals and handbooks with advice on how to rear silkworms began to appear. For instance, in his *Systema agriculturae*, John Worlidge recommended that growers hang lavender and sprigs of rosemary between the shelves where the silkworms were housed to keep them warm.[^44] In a 1622 letter to the Earl of South-Hampton, John Bonoeil, a sericulture advisor to James I, suggested growers "caste a little Vinegar" or "sweet smelling herbes" on coals in the oven or fireplace to "comfort the Wormes."[^45] When it came to the silkworm, no detail was too small. The worms were mated on the backside of old velvet or other "stuffe"—never linen, paper, or wool—lest the eggs bond too tightly to the fabric.[^46]
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=5&width=100%25&height=650 height=650px .center`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=5&width=100%25&height=650" class="right" %}
 
 To kill the worms within their cocoons, the best practice was using cauldrons, half full of hot water, with a wooden cover bored full of holes stationed three or four fingers above the water; spread on top of the cover would be a thin layer of "[Darnix](https://en.wikipedia.org/wiki/Dornix)," where the silk cocoons were to be frequently stirred.[^47] By 1639, likely through experimentation, Virginian sericulturists had become aware of the silkworms’ proclivity for white mulberries—Sir Francis Wyatt wrote instructions to sericulturists ensuring that these were the sole variety planted.[^48] And, as the colonists realized that the highest quality silk came from white mulberry leaves, they too planted acres of white mulberry.[^49] Virginian sericulture, as elsewhere in the world, became a more precise science. The fascination to understand the alchemy of silk-making continues. Modern research has shown that although silkworm larvae will eat other leaves, such as lettuce and fig leaves, they are most attracted to unique essential oils in mulberry leaves.[^50]
 
@@ -134,11 +134,11 @@ To kill the worms within their cocoons, the best practice was using cauldrons, h
 
 Apart from these ventures in Virginia, successful silkworm-rearing attempts in the United States were few and far between.[^51] Suboptimal climate, disease, a focus on other agricultural pursuits, and often a general lack of knowledge meant that few of these pursuits ever took hold, with exceptions in Virginia, Georgia, Kentucky, and Pennsylvania (1725).[^52] Virginia’s moderately successful venture from 1609 to 1676 eventually faded away too, lost to tobacco and rebellion.[^53] Though faded, silk production would be given another chance nearly two hundred years later in Virginia’s 1830s mulberry craze.[^54]
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=7&width=100%25&height=650 height=650px .center`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=7&width=100%25&height=650" class="right" %}
 
 Since a silkworm consumes about sixty grams of white mulberry leaves during its six-week life cycle and only produces 0.2 grams of silk, one hectare of white mulberry trees would likely produce around forty kilograms of silk.[^55] Having a vast stock of mulberry trees to provide food for the silkworms was essential to firmly reestablish sericulture in Virginia. To this end, new acres of white mulberry were planted across Virginia to support the hopeful, renewed industry—the red mulberry, once again, was considered of no use. As we will learn next, the white mulberry spread far beyond Virginia—in fact, the highly invasive species spread throughout the country. Today, the tree can be found in every continent but the poles. As garden historian Bill Laws put it, "The silken mulberry had crossed the world."
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=8&width=100%25&height=650 height=650px .center`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQ_scA3HeQbfRmsvLmQjatJ-LY7axuwoYbUAdV1ss75k3Fg4lPYHdybYwwXSmHSpiNaHFEFAUMa2fi4&font=Default&lang=en&initial_zoom=2&start_at_slide=8&width=100%25&height=650" class="right" %}
 
 # The Love Affair Turns Sour
 
@@ -174,7 +174,7 @@ For centuries, people in different parts of the world have used mulberry trees f
 
 Alongside the pruning, grafting, altering, and shaping to suit human needs, a different quality of relationship with the red mulberry co-evolved with Native American peoples. In his travelogue recounting his journeys through North American landscapes in the eighteenth century, Pehr Kalms wrote of the fruit bread he ate with the Iroquois peoples: it was "just like the puddings which our women pack full of raisins."[^76] The tree’s berries provided fruit, preserves, such as jams and syrups, as well as mulberry wine.
 
-`youtube vid=NFXZCJwRRs8 .medium aspect=1.6`
+{% include embed/youtube.html id="NFXZCJwRRs8" aspect="1.6" class="right" %}
 
 In 1979, the "alley-cat nature" of the white mulberry recommended the adaptability and fast growth of the species.[^82] However, the fast propagation of the white mulberry has put red mulberry in danger of dying out in parts of Canada.[^83] In Ontario, red mulberry is an endangered species. In 2023, only three hundred trees remained.[^84] Along with loss and fragmentation of its forest habitat, the red mulberry’s main threat is the white mulberry, which both outcompetes and quickly hybridizes red mulberry. The hybrid trees are difficult to distinguish as either purely white or red until they are adults, when the glossy and smooth leaves of the white mulberry contrast with the leaves of the red mulberry, which aren’t shiny and feel rough to the touch. Conservation efforts of the red mulberry center around controlled pollination once they have been confirmed as a pure species through genetic testing.[^85]
 
