--- a/_posts/2025-08-28-potato.md
+++ b/_posts/2025-08-28-potato.md
@@ -37,11 +37,11 @@ Over the millennia, the potato has been the subject of diverse associations, mea
 
 These controversies saw the potato cast in terms of the perennial conflict between nature and culture. In contrast to bread, the archetypal staple food and staff of life, the potato was viewed as dangerously organic and chthonic, representative of the threat posed by disordered nature to culture and civilization.[^2] Well-intentioned efforts to combat food scarcity and promote the nutritional value of the potato clashed with ingrained attitudes that stigmatized the tuber as unhealthy, inferior to wheaten bread, and a danger to ordered society. Today, science seeks to ameliorate the vulnerability intrinsic to the potato—and which is largely responsible for its tragic associations—by introducing genetic material from wild relatives endemic to Latin America. That the potato has long been implicated in global movement, migration, and profound historical change speaks to the potential for plants to serve as archives in their own right.
 
-`iframe src=https://archive.org/embed/mobot31753000817749/page/780/ aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/mobot31753000817749/page/780/" aspect=".7" class="right" %}
 
 The potato plays a significant role in the histories of famine and social inequality, poverty and migration, war and colonialism. In its native range, the potato’s singular capacity to mobilize labor enabled the consolidation of Incan imperial power; on a global scale, it helped fuel European conquest and colonialism.[^3] Historical tragedies such as the Irish Great Famine have cemented the potato’s association with hardship and suffering in the collective imagination, a theme that persists in narratives of refugees and internment camps. These tangled social and cultural histories compel us to interrogate how one plant, taking root in different societal contexts, has come to embody such contrasting associations.
 
-`iframe src=https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vSjy6XZYKEdC-kBvDqowP0P37PXI-rYTAb-SjLVN6241TiR_yGcPvjDd60bhF9kuBNv1w5A5iJhvPkv&font=Default&lang=en&initial_zoom=2&width=100%25&height=650 height=650px`
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vSjy6XZYKEdC-kBvDqowP0P37PXI-rYTAb-SjLVN6241TiR_yGcPvjDd60bhF9kuBNv1w5A5iJhvPkv&font=Default&lang=en&initial_zoom=2&width=100%25&height=650" class="right" %}
 
 # What Is a Potato?
 
@@ -61,7 +61,7 @@ Indigenous to the Peruvian-Bolivian Andes mountains of South America, the potato
 
 Potatoes, along with corn and quinoa, became crucial food crops that Indigenous farmers and communities worked together to plant, harvest, and circulate as part of a complex system of labor and trade that helped sustain the dietary needs of populations dispersed over mountainous terrains. Andean farmers wielded tools, such as the *ayacho* (a mattock with blades) and *taclla* (a foot plough) in Quechua, to break and shift soil for the planting. The labor required to grow and harvest potatoes was formalized under the Incan Empire, in a system called *mit’a* (a turn or season), which required each man and woman of a community to work cooperatively by reciprocating labor and to contribute to the state.[^14]
 
-`iframe src=https://archive.org/embed/primer-nueva-coronica-y-buen-gobierno-manuscrito/page/n1157/ aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/primer-nueva-coronica-y-buen-gobierno-manuscrito/page/n1157/" aspect=".7" class="right" %}
 
 Incan calendars depicted potato planting and harvest. This can be seen in the manuscript *First New Chronicle and Good Government (El Primer Nueva Corónica y Buen Gobierno)* written by Felipe Guamán Poma de Ayala in 1615 and included in Inca Garcilaso de la Vega’s *The Royal Commentaries of the Incas (Comentarios Reales de los Incas)*. Three months of the year were notable for potato planting and harvest: January, June, and December. De la Vega detailed that January was the month for "work in the potato fields; a man and woman are seen with hoes in their hands." In June, "potatoes are dug with spades." And in December, "potatoes and quinoa are planted." The illustration for December "shows a peasant being helped by a woman to make a hole in the earth with a spade driven in by a mallet, while a second woman is preparing to place a potato in it."[^15]
 
@@ -88,11 +88,11 @@ The potato debaters rejected the earlier efforts of agricultural reformers like 
 
 William Cobbett, a journalist with sensationalist instincts and one of the most ardent opponents of the potato, spoke of "miserable shed[s]" and "holes" where people lived and dined, alongside their livestock, on potatoes: "nasty, filthy hog-feed."[^26] Cobbett’s dehumanizing language portrays potato eaters as scarcely better than animals, living in filth and misery. In keeping with these sentiments, Cobbett opens his entry on the potato in *The English Gardener* by stating unequivocally that the potato is to be used "merely in company with meat, and not to be used as a substitute for bread…as a substitute for bread, it is the most wasteful thing that can possibly be used." Far from being suitable for human consumption, he considered potatoes to be "inferior" livestock feed compared to a host of other vegetables.[^27]
 
-`iframe src=https://archive.org/embed/perkins73099848/page/n4/ aspect=.7`
+{% include embed/iframe.html src="https://archive.org/embed/perkins73099848/page/n4/" aspect=".7" class="right" %}
 
 In general, the reliance by Irish Catholic peasants on potatoes contrasted with the diets of Protestant landowners, who were influenced by English gardening practices and cultivated a diversity of crops on their estates, thus—by their perspective—improving the land and taking advantage of its productivity.[^28] The class division evident in gardening and cultivation practices comported with an enduring, biblical-tinged rhetoric about the Irish peasant classes dating back to the seventeenth century. In the eyes of English contemporaries, Ireland was untamed, unbroken nature, like Eden before the Fall, its bounties unharnessed by a sybaritic, unindustrious populace.[^29] This view served to justify the negative characterizations of the Irish given voice in the potato debates. Controversy surrounding the potato also linked back to traditional food culture in Europe, which held that vegetables that grew under the ground were the lowliest sort of food.[^30] During the Industrial Revolution, potatoes would come to be embraced by employers: as cheap and plentiful foodstuff, it enabled them to justify paying workers the lowest living wage.[^31]
 
-`image-compare before=wc:Arcimboldo_Otoño.jpg after=wc:Still_Life_with_an_Earthen_Bowl_and_Potatoes_by_Vincent_van_Gogh.jpg caption="Vincent Van Gogh, *Still Life with Potatoes*, 1885; Giuseppe Arcimboldo, *Autumn*, 1573. Wikimedia Commons."`
+{% include embed/image-compare.html before="wc:Arcimboldo_Otoño.jpg" after="wc:Still_Life_with_an_Earthen_Bowl_and_Potatoes_by_Vincent_van_Gogh.jpg" caption="Vincent Van Gogh, *Still Life with Potatoes*, 1885; Giuseppe Arcimboldo, *Autumn*, 1573. Wikimedia Commons." class="right" %}
 
 # New Food for a New Republic: The Potato in France
 
@@ -122,7 +122,7 @@ That the potato could be tied up in globally consequent social change is nowhere
 
 It is worth noting that the Irish had become exclusively dependent on a small number of potato varieties, in particular the blight-prone variety called “Lumper.”[^50] The blight, caused by the infection of potato plants by the Phytophthora infestans fungus, affected potato crops throughout Western Europe. However, only in Ireland did it precipitate the Great Famine, characterized by immense suffering, the death of over one million people, and the subsequent mass migration of over two million Irish people, particularly to North America.[^51] The potato is intertwined with two parallel histories of transatlantic movement: the first, the exchange of food crops—notably the potato—between the Americas and Eurasia, and the second, the migration of Irish people to America. The latter had historical and social reverberations not only for Ireland, but also for the development of the United States.
 
-`image-compare before=wc:Irish_diaspora.jpg after=wc:Columbian_Exchange.webp caption="Parallel maps showing Irish diaspora and Columbian exchange. Wikimedia Commons."`
+{% include embed/image-compare.html before="wc:Irish_diaspora.jpg" after="wc:Columbian_Exchange.webp" caption="Parallel maps showing Irish diaspora and Columbian exchange. Wikimedia Commons." class="right" %}
 
 # Manzanar War Relocation Center
 
