--- a/_posts/2025-09-29-coffee.md
+++ b/_posts/2025-09-29-coffee.md
@@ -30,7 +30,7 @@ Endemic to the highlands of Ethiopia, southeastern Sudan, and northern Kenya, Ar
 
 Arabica became an agent of connection and community building where it was grown and, further down the supply chain, where it was consumed. Coffeehouses have served as centers of intellectual and cultural exchange for centuries. Countless relationships have been sparked by the question, "Do you want to meet for coffee?" Between planting, harvesting, processing, milling, roasting, and every other step of production and distribution, coffee is touched by at least nine sets of hands before it reaches the consumer.[^5]
 
-{% include embed/youtube.html vid="faTsRV7bkEc" class="right" %}
+{% include embed/youtube.html id="faTsRV7bkEc" caption="Coffee: From Farm to Cup" aspect="1.8" class="right" %}
 
 Demand for coffee continues to grow, but the future of the industry is uncertain. In addition to concerns over price volatility and labor conditions on coffee farms, Arabica coffee is especially vulnerable to climate change and its associated impacts, such as rising temperatures, altered precipitation, and increased pressure from insect pests and plant pathogens. Researchers have proposed a number of solutions to protect the plant and other coffee species, each with unique benefits and challenges. These suggestions, if implemented thoughtfully and collaboratively by industry stakeholders, can help safeguard coffee production—and with it, the enduring legacy of a rich global history. 
 
