--- a/_posts/2025-11-25-wild-rice.md
+++ b/_posts/2025-11-25-wild-rice.md
@@ -100,13 +100,13 @@ In "Gathering Wild Rice, 1849–1855," Seth Eastman, an artist and U.S. Army com
 {% include embed/image.html src="wc:Wild_rice_harvesting_and_processing_-_NARA_-_285183.jpg" caption="Wild rice harvesting and processing" aspect="1.7" class="right" %}
 {% include embed/image.html src="wc:Winnowing_the_wild_rice_in_a_birch_bark_basket.jpg" caption="Winnowing the wild rice in a birch bark basket" aspect="1.5" class="right" %}
 {% include embed/image.html src="wc:Parching_the_wild_rice_over_an_open_flame.jpg" caption="Parching the wild rice over an open flame" aspect="1.5" class="right" %}
-{% include embed/video.html src="SH_YYyw9yF8" aspect="1.8" class="right" %}
-{% include embed/video.html src="6tjd7H1iQWY" aspect="1.8" class="right" %}
-{% include embed/video.html src="EFW5QE6ahOU" aspect="1.8" class="right" %}
+{% include embed/youtube.html id="SH_YYyw9yF8" aspect="1.8" class="right" %}
+{% include embed/youtube.html id="6tjd7H1iQWY" aspect="1.8" class="right" %}
+{% include embed/youtube.html id="EFW5QE6ahOU" aspect="1.8" class="right" %}
 
 Historically, both Ojibwe men and women performed wild rice harvesting, with men steering the canoe and women knocking the grains into the canoe. In the decades following land cessions, forced migration, and colonial settlement, the labor relations and gender roles involved in harvesting changed. During the early twentieth century, the state of Minnesota created [wild rice camps](https://www.kaxe.org/local-news/2023-09-22/wild-rice-camp-highlights-sacred-plant-and-the-fight-to-protect-it), and state control over wild rice harvesting was codified in 1939.[^23] According to Ojibwe historian Brenda Child, the wild rice waters and ricing camps were gendered spaces where women expressed autonomy through the labor and organization of creating and maintaining wild rice economies. Indeed, the wild rice waters themselves became a gendered landscape through women’s involvement in and jurisdiction over harvesting and ricing.[^24]
 
-{% include embed/video.html src="HvLvwo3a5PU" aspect="1.8" class="right" %}
+{% include embed/youtube.html id="HvLvwo3a5PU" aspect="1.8" class="right" %}
 {% include embed/image.html src="wc:Wild_rice_harvesting_and_processing_-_NARA_-_285183.jpg" caption="Wild rice harvesting and processing" aspect="1.7" class="right" %}
 
 # Landscape as Collaborator
@@ -122,7 +122,7 @@ Like other grasses, a crucial phase of the wild rice’s life cycle is the shatt
 
 Harvesting was not only a process of gathering but also a process of reseeding the plant for future harvests. Jenks wrote that "the plant, unless it is artificially sown, is gradually being extinguished in such beds as are continuously used."[^26] The significant portion of seeds being knocked back into water rather than harvested in the canoe was not waste, but an active management strategy. Responsive to changing environmental conditions, the reseeding during harvest treats the landscape as a collaborator: to remain viable, wild rice seeds require submergence in the soil during undisturbed dormancy. The aquatic landscape remains an active participant in the reseeding process, highlighting the importance of the landscape itself in maintaining a relationship between wild rice and humans. Defined by ecologist Fikret Berkes, TEK is a knowledge-practice-belief complex comprising experience gleaned from thousands of years of direct human contact with their environment.[^27] The artificial sowing of wild rice seeds is one example of the activation of TEK.[^28]
 
-{% include embed/video.html src="WpfTvLMNqvg" aspect="1.8" class="right" %}
+{% include embed/youtube.html id="WpfTvLMNqvg" aspect="1.8" class="right" %}
 
 # Cultivation, Commodification, and Commercialization
 
@@ -140,7 +140,7 @@ Cultivation is domestication occurring in real time. Cultivated wild rice, or wi
 
 With rising temperatures and less ice cover, the proliferation of wild rice is severely threatened by climate change. Its seeds, which require frozen temperatures during their dormancy, cannot germinate as well or at all in warm weather. In addition, rapid fluctuations in water depth due to severe weather events, like concentrated rainfall events and droughts, disrupt plant growth, and as a result, the amount of suitable habitat shrinks.
 
-{% include embed/video.html src="46XHxnjGs4o" aspect="1.8" class="right" %}
+{% include embed/youtube.html id="46XHxnjGs4o" aspect="1.8" class="right" %}
 
 Serious threats are posed to naturally occurring wild rice stands by the potential expansion of copper and nickel open-pit mining and their toxic discharges. The amount of sulfate in the St. Louis watershed has increased over the past half-century, adversely affecting the plant’s growth. Today, pipelines like the Enbridge "Line 3" and others threaten the health not only of wild rice habitats, but also of the entire St. Louis watershed and the ecosystems contained therein. 
 
